Edit: aim sway increased and look sens decreased

--- a/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -156,7 +156,8 @@ PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport3",ConfigSettin
 LastLevel=/Game/bodycamFPSkit/Maps/Map_Test
 
 [AssetEditorSubsystem]
-CleanShutdown=True
+CleanShutdown=False
+OpenAssetsAtExit=/Game/bodycamFPSkit/Blueprints/BP_FirstPersonCharacter.BP_FirstPersonCharacter
 
 [RootWindow]
 ScreenPosition=X=320.000 Y=180.000
@@ -1283,9 +1284,10 @@ ContentBrowserDrawer.ThumbnailSize=2
 ContentBrowserDrawer.CurrentViewType=1
 
 [ContentBrowserRecent]
-MRUItem0=/Game/bodycamFPSkit/Maps/Map_Test
-MRUItem1=/Game/SCL_Assets/02_Lobby/Map/A02_Lobby
-MRUItem2=/Game/bodycamFPSkit/Blueprints/Weapons/Pistol/BP_Weapon_Pickup_Pistol
+MRUItem0=/Game/bodycamFPSkit/Blueprints/BP_FirstPersonCharacter
+MRUItem1=/Game/bodycamFPSkit/Maps/Map_Test
+MRUItem2=/Game/SCL_Assets/02_Lobby/Map/A02_Lobby
+MRUItem3=/Game/bodycamFPSkit/Blueprints/Weapons/Pistol/BP_Weapon_Pickup_Pistol
 
 [MessageLog]
 LastLogListing=MapCheck
@@ -1304,6 +1306,84 @@ BP_Weapon_Pickup_Pistol_C.HLOD=True
 BP_Weapon_Pickup_Pistol_C.Physics=True
 BP_Weapon_Pickup_Pistol_C.WorldPartition=True
 BP_Weapon_Pickup_Pistol_C.Events=True
+BP_FirstPersonCharacter_C.TransformCommon=True
+BP_FirstPersonCharacter_C.Animation=True
+BP_FirstPersonCharacter_C.Mesh=True
+BP_FirstPersonCharacter_C.Default=True
+BP_FirstPersonCharacter_C.Tick=True
+BP_FirstPersonCharacter_C.ComponentTick=True
+BP_FirstPersonCharacter_C.Physics=True
+BP_FirstPersonCharacter_C.Clothing=True
+BP_FirstPersonCharacter_C.LeaderPoseComponent=True
+BP_FirstPersonCharacter_C.Collision=True
+BP_FirstPersonCharacter_C.Lighting=True
+BP_FirstPersonCharacter_C.AnimationRig=True
+BP_FirstPersonCharacter_C.Deformer=True
+BP_FirstPersonCharacter_C.SkinWeights=True
+BP_FirstPersonCharacter_C.Rendering=True
+BP_FirstPersonCharacter_C.HLOD=True
+BP_FirstPersonCharacter_C.PathTracing=True
+BP_FirstPersonCharacter_C.Mobile=True
+BP_FirstPersonCharacter_C.Navigation=True
+BP_FirstPersonCharacter_C.RayTracing=True
+BP_FirstPersonCharacter_C.VirtualTexture=True
+BP_FirstPersonCharacter_C.Tags=True
+BP_FirstPersonCharacter_C.AssetUserData=True
+BP_FirstPersonCharacter_C.Replication=True
+BP_FirstPersonCharacter_C.ComponentReplication=True
+BP_FirstPersonCharacter_C.Activation=True
+BP_FirstPersonCharacter_C.Variable=True
+BP_FirstPersonCharacter_C.Cooking=True
+BP_FirstPersonCharacter_C.Character Movement (General Settings)=True
+BP_FirstPersonCharacter_C.Character Movement: Walking=True
+BP_FirstPersonCharacter_C.Character Movement: Jumping / Falling=True
+BP_FirstPersonCharacter_C.Character Movement (Networking)=True
+BP_FirstPersonCharacter_C.Character Movement: Swimming=True
+BP_FirstPersonCharacter_C.Character Movement: Flying=True
+BP_FirstPersonCharacter_C.Character Movement: Custom Movement=True
+BP_FirstPersonCharacter_C.Character Movement (Rotation Settings)=True
+BP_FirstPersonCharacter_C.Character Movement: Physics Interaction=True
+BP_FirstPersonCharacter_C.Character Movement=True
+BP_FirstPersonCharacter_C.Character Movement: Avoidance=True
+BP_FirstPersonCharacter_C.RootMotion=True
+BP_FirstPersonCharacter_C.Character Movement: NavMesh Movement=True
+BP_FirstPersonCharacter_C.NavMovement=True
+BP_FirstPersonCharacter_C.Velocity=True
+BP_FirstPersonCharacter_C.PlanarMovement=True
+BP_FirstPersonCharacter_C.MovementComponent=True
+BP_FirstPersonCharacter_C.Shape=True
+BP_FirstPersonCharacter_C.Character=True
+BP_FirstPersonCharacter_C.Crouch=True
+BP_FirstPersonCharacter_C.Procedural Walk=True
+BP_FirstPersonCharacter_C.AIM=True
+BP_FirstPersonCharacter_C.FOV=True
+BP_FirstPersonCharacter_C.Slide=True
+BP_FirstPersonCharacter_C.Lean=True
+BP_FirstPersonCharacter_C.HUD=True
+BP_FirstPersonCharacter_C.Inputs=True
+BP_FirstPersonCharacter_C.Weapon Inventory=True
+BP_FirstPersonCharacter_C.Save=True
+BP_FirstPersonCharacter_C.Bodycam=True
+BP_FirstPersonCharacter_C.CoyoteTime=True
+BP_FirstPersonCharacter_C.ProceduralWalk=True
+BP_FirstPersonCharacter_C.WeaponSway=True
+BP_FirstPersonCharacter_C.MyCharacter=True
+BP_FirstPersonCharacter_C.GunClipping=True
+BP_FirstPersonCharacter_C.ProceduralIdle=True
+BP_FirstPersonCharacter_C.EquipUnequip=True
+BP_FirstPersonCharacter_C.LowHigh=True
+BP_FirstPersonCharacter_C.WeaponInventory=True
+BP_FirstPersonCharacter_C.Camera=True
+BP_FirstPersonCharacter_C.Pawn=True
+BP_FirstPersonCharacter_C.Actor=True
+BP_FirstPersonCharacter_C.Input=True
+BP_FirstPersonCharacter_C.WorldPartition=True
+BP_FirstPersonCharacter_C.Events=True
+EdGraph.Graph=True
+EdGraph.Inputs=True
+EdGraph.Outputs=True
+K2Node_VariableGet.Variable=True
+K2Node_VariableGet.DefaultValueCategory=True
 
 [AssetEditorToolkitTabLocation]
 /Game/bodycamFPSkit/Blueprints/Weapons/Pistol/BP_Weapon_Pickup_Pistol.BP_Weapon_Pickup_Pistol=1
