--- a/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -157,7 +157,6 @@ LastLevel=/Game/bodycamFPSkit/Maps/Map_Test
 
 [AssetEditorSubsystem]
 CleanShutdown=False
-OpenAssetsAtExit=/Game/bodycamFPSkit/Blueprints/BP_FirstPersonCharacter.BP_FirstPersonCharacter
 
 [RootWindow]
 ScreenPosition=X=320.000 Y=180.000
@@ -1282,12 +1281,16 @@ ContentBrowserDrawer.SelectedCollections=
 ContentBrowserDrawer.ExpandedCollections=
 ContentBrowserDrawer.ThumbnailSize=2
 ContentBrowserDrawer.CurrentViewType=1
+AssetPropertyPicker.ThumbnailSize=2
+AssetPropertyPicker.CurrentViewType=0
 
 [ContentBrowserRecent]
-MRUItem0=/Game/bodycamFPSkit/Blueprints/BP_FirstPersonCharacter
-MRUItem1=/Game/bodycamFPSkit/Maps/Map_Test
-MRUItem2=/Game/SCL_Assets/02_Lobby/Map/A02_Lobby
-MRUItem3=/Game/bodycamFPSkit/Blueprints/Weapons/Pistol/BP_Weapon_Pickup_Pistol
+MRUItem0=/Game/bodycamFPSkit/Blueprints/Weapons/BP_Weapon_Basic
+MRUItem1=/Game/bodycamFPSkit/Blueprints/BP_Weapon_Base
+MRUItem2=/Game/bodycamFPSkit/Blueprints/BP_FirstPersonCharacter
+MRUItem3=/Game/bodycamFPSkit/Maps/Map_Test
+MRUItem4=/Game/SCL_Assets/02_Lobby/Map/A02_Lobby
+MRUItem5=/Game/bodycamFPSkit/Blueprints/Weapons/Pistol/BP_Weapon_Pickup_Pistol
 
 [MessageLog]
 LastLogListing=MapCheck
@@ -1384,9 +1387,93 @@ EdGraph.Inputs=True
 EdGraph.Outputs=True
 K2Node_VariableGet.Variable=True
 K2Node_VariableGet.DefaultValueCategory=True
+BP_Weapon_Base_C.Tick=True
+BP_Weapon_Base_C.Default=True
+BP_Weapon_Base_C.Weapon=True
+BP_Weapon_Base_C.Animations=True
+BP_Weapon_Base_C.ADS=True
+BP_Weapon_Base_C.Weapon Stats=True
+BP_Weapon_Base_C.Fire Logic=True
+BP_Weapon_Base_C.Audio=True
+BP_Weapon_Base_C.Procedural Anims=True
+BP_Weapon_Base_C.WeaponStats=True
+BP_Weapon_Base_C.WeaponClip=True
+BP_Weapon_Base_C.Replication=True
+BP_Weapon_Base_C.Rendering=True
+BP_Weapon_Base_C.Collision=True
+BP_Weapon_Base_C.Actor=True
+BP_Weapon_Base_C.Input=True
+BP_Weapon_Base_C.HLOD=True
+BP_Weapon_Base_C.Physics=True
+BP_Weapon_Base_C.WorldPartition=True
+BP_Weapon_Base_C.Events=True
+StaticMeshComponent.Variable=True
+StaticMeshComponent.TransformCommon=True
+StaticMeshComponent.Sockets=True
+StaticMeshComponent.StaticMesh=True
+StaticMeshComponent.Materials=True
+StaticMeshComponent.ComponentTick=True
+StaticMeshComponent.Physics=True
+StaticMeshComponent.Collision=True
+StaticMeshComponent.HLOD=True
+StaticMeshComponent.Lighting=True
+StaticMeshComponent.PathTracing=True
+StaticMeshComponent.Rendering=True
+StaticMeshComponent.Navigation=True
+StaticMeshComponent.VirtualTexture=True
+StaticMeshComponent.Tags=True
+StaticMeshComponent.ComponentReplication=True
+StaticMeshComponent.Cooking=True
+StaticMeshComponent.Events=True
+BP_Weapon_Basic_C.Tick=True
+BP_Weapon_Basic_C.Weapon=True
+BP_Weapon_Basic_C.WeaponStats=True
+BP_Weapon_Basic_C.Default=True
+BP_Weapon_Basic_C.ADS=True
+BP_Weapon_Basic_C.WeaponClip=True
+BP_Weapon_Basic_C.Audio=True
+BP_Weapon_Basic_C.Procedural Anims=True
+BP_Weapon_Basic_C.Animations=True
+BP_Weapon_Basic_C.Fire Logic=True
+BP_Weapon_Basic_C.Weapon Stats=True
+BP_Weapon_Basic_C.Replication=True
+BP_Weapon_Basic_C.Rendering=True
+BP_Weapon_Basic_C.Collision=True
+BP_Weapon_Basic_C.Actor=True
+BP_Weapon_Basic_C.Input=True
+BP_Weapon_Basic_C.HLOD=True
+BP_Weapon_Basic_C.Physics=True
+BP_Weapon_Basic_C.WorldPartition=True
+BP_Weapon_Basic_C.Events=True
+SkeletalMeshComponent.Variable=True
+SkeletalMeshComponent.TransformCommon=True
+SkeletalMeshComponent.Sockets=True
+SkeletalMeshComponent.Animation=True
+SkeletalMeshComponent.Mesh=True
+SkeletalMeshComponent.ComponentTick=True
+SkeletalMeshComponent.Clothing=True
+SkeletalMeshComponent.LeaderPoseComponent=True
+SkeletalMeshComponent.Physics=True
+SkeletalMeshComponent.AnimationRig=True
+SkeletalMeshComponent.Collision=True
+SkeletalMeshComponent.Deformer=True
+SkeletalMeshComponent.Lighting=True
+SkeletalMeshComponent.SkinWeights=True
+SkeletalMeshComponent.HLOD=True
+SkeletalMeshComponent.Rendering=True
+SkeletalMeshComponent.PathTracing=True
+SkeletalMeshComponent.Navigation=True
+SkeletalMeshComponent.VirtualTexture=True
+SkeletalMeshComponent.Tags=True
+SkeletalMeshComponent.ComponentReplication=True
+SkeletalMeshComponent.Activation=True
+SkeletalMeshComponent.Cooking=True
+SkeletalMeshComponent.Events=True
 
 [AssetEditorToolkitTabLocation]
 /Game/bodycamFPSkit/Blueprints/Weapons/Pistol/BP_Weapon_Pickup_Pistol.BP_Weapon_Pickup_Pistol=1
+/Game/bodycamFPSkit/Blueprints/BP_Weapon_Base.BP_Weapon_Base=1
+/Game/bodycamFPSkit/Blueprints/Weapons/BP_Weapon_Basic.BP_Weapon_Basic=1
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
