Edit: update default keybindings

--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -157,7 +157,7 @@ DoubleClickTime=0.200000
 +ActionMappings=(ActionName="Run",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=LeftShift)
 +ActionMappings=(ActionName="LeanLeft",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Q)
 +ActionMappings=(ActionName="LeanRight",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=E)
-+ActionMappings=(ActionName="CycleSight",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Tab)
++ActionMappings=(ActionName="CycleSight",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=T)
 +ActionMappings=(ActionName="Melee",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=V)
 +ActionMappings=(ActionName="Interact",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=F)
 +ActionMappings=(ActionName="EscapeMenu",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Escape)
@@ -166,9 +166,9 @@ DoubleClickTime=0.200000
 +ActionMappings=(ActionName="SecondaryWeapon",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Two)
 +ActionMappings=(ActionName="WeaponDrop",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Three)
 +ActionMappings=(ActionName="Slide",bShift=True,bCtrl=False,bAlt=False,bCmd=False,Key=C)
-+ActionMappings=(ActionName="Jump",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=SpaceBar)
-+ActionMappings=(ActionName="Inspect",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Z)
-+ActionMappings=(ActionName="Crouch",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=C)
++ActionMappings=(ActionName="Jump",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=C)
++ActionMappings=(ActionName="Inspect",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=I)
++ActionMappings=(ActionName="Crouch",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=SpaceBar)
 +ActionMappings=(ActionName="FireMode",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=B)
 +AxisMappings=(AxisName="MoveForward",Scale=1.000000,Key=W)
 +AxisMappings=(AxisName="MoveForward",Scale=-1.000000,Key=S)
