--- a/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -156,10 +156,10 @@ PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport3",ConfigSettin
 LastLevel=/Game/bodycamFPSkit/Maps/Map_Test
 
 [AssetEditorSubsystem]
-CleanShutdown=False
+CleanShutdown=True
 
 [RootWindow]
-ScreenPosition=X=320.000 Y=180.000
+ScreenPosition=X=317.000 Y=177.000
 WindowSize=X=1280.000 Y=720.000
 InitiallyMaximized=True
 
@@ -1245,6 +1245,14 @@ Voice.TimeStamp=2023.08.20-00.43.50
 Voice.LastCompileMethod=Unknown
 MovieSceneCapture.TimeStamp=2023.08.20-00.43.06
 MovieSceneCapture.LastCompileMethod=Unknown
+HierarchicalLODUtilities.TimeStamp=2023.08.20-00.43.00
+HierarchicalLODUtilities.LastCompileMethod=Unknown
+ExternalImagePicker.TimeStamp=2023.08.20-00.42.49
+ExternalImagePicker.LastCompileMethod=Unknown
+SequencerWidgets.TimeStamp=2023.08.20-00.43.28
+SequencerWidgets.LastCompileMethod=Unknown
+UndoHistoryEditor.TimeStamp=2023.08.20-00.43.43
+UndoHistoryEditor.LastCompileMethod=Unknown
 
 [Python]
 LastDirectory=
@@ -1273,7 +1281,7 @@ ContentBrowserDrawer.VerticalSplitter.SlotSize1=0.75
 ContentBrowserDrawer.FavoriteSplitter.SlotSize0=0.200000003
 ContentBrowserDrawer.FavoriteSplitter.SlotSize1=0.800000012
 ContentBrowserDrawer.FavoriteSplitter.SlotSize2=0.400000006
-ContentBrowserDrawer.SelectedPaths=/Game/bodycamFPSkit
+ContentBrowserDrawer.SelectedPaths=/Game/bodycamFPSkit/Blueprints/Weapons
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 FavoritePaths=
@@ -1285,16 +1293,18 @@ AssetPropertyPicker.ThumbnailSize=2
 AssetPropertyPicker.CurrentViewType=0
 
 [ContentBrowserRecent]
-MRUItem0=/Game/bodycamFPSkit/Blueprints/Widgets/UI_KEYS
-MRUItem1=/Game/bodycamFPSkit/Blueprints/Widgets/UI_MAINMENU
-MRUItem2=/Game/bodycamFPSkit/Blueprints/Widgets/UI_MAINMENUSETTINGS
-MRUItem3=/Game/bodycamFPSkit/Blueprints/Weapons/Pistol/BP_Weapon_Pickup_Pistol
-MRUItem4=/Game/bodycamFPSkit/Blueprints/Weapons/Pistol/BP_Weapon_Pistol
-MRUItem5=/Game/bodycamFPSkit/Blueprints/Weapons/BP_Weapon_Basic
-MRUItem6=/Game/bodycamFPSkit/Blueprints/BP_Weapon_Base
-MRUItem7=/Game/bodycamFPSkit/Blueprints/BP_FirstPersonCharacter
-MRUItem8=/Game/bodycamFPSkit/Maps/Map_Test
-MRUItem9=/Game/SCL_Assets/02_Lobby/Map/A02_Lobby
+MRUItem0=/Game/bodycamFPSkit/Blueprints/Weapons/HeavyPistol/BP_Weapon_HeavyPistol
+MRUItem1=/Game/bodycamFPSkit/Blueprints/Weapons/PistolP226/BP_EBBullet_PistolP226
+MRUItem2=/Game/bodycamFPSkit/Blueprints/Widgets/UI_KEYS
+MRUItem3=/Game/bodycamFPSkit/Blueprints/Widgets/UI_MAINMENU
+MRUItem4=/Game/bodycamFPSkit/Blueprints/Widgets/UI_MAINMENUSETTINGS
+MRUItem5=/Game/bodycamFPSkit/Blueprints/Weapons/Pistol/BP_Weapon_Pickup_Pistol
+MRUItem6=/Game/bodycamFPSkit/Blueprints/Weapons/Pistol/BP_Weapon_Pistol
+MRUItem7=/Game/bodycamFPSkit/Blueprints/Weapons/BP_Weapon_Basic
+MRUItem8=/Game/bodycamFPSkit/Blueprints/BP_Weapon_Base
+MRUItem9=/Game/bodycamFPSkit/Blueprints/BP_FirstPersonCharacter
+MRUItem10=/Game/bodycamFPSkit/Maps/Map_Test
+MRUItem11=/Game/SCL_Assets/02_Lobby/Map/A02_Lobby
 
 [MessageLog]
 LastLogListing=MapCheck
@@ -1838,6 +1848,26 @@ CanvasPanel.Performance=True
 CanvasPanel.Clipping=True
 CanvasPanel.Navigation=True
 CanvasPanel.Localization=True
+BP_Weapon_HeavyPistol_C.Tick=True
+BP_Weapon_HeavyPistol_C.Weapon=True
+BP_Weapon_HeavyPistol_C.WeaponStats=True
+BP_Weapon_HeavyPistol_C.Default=True
+BP_Weapon_HeavyPistol_C.ADS=True
+BP_Weapon_HeavyPistol_C.WeaponClip=True
+BP_Weapon_HeavyPistol_C.Audio=True
+BP_Weapon_HeavyPistol_C.Procedural Anims=True
+BP_Weapon_HeavyPistol_C.Animations=True
+BP_Weapon_HeavyPistol_C.Fire Logic=True
+BP_Weapon_HeavyPistol_C.Weapon Stats=True
+BP_Weapon_HeavyPistol_C.Replication=True
+BP_Weapon_HeavyPistol_C.Rendering=True
+BP_Weapon_HeavyPistol_C.Collision=True
+BP_Weapon_HeavyPistol_C.Actor=True
+BP_Weapon_HeavyPistol_C.Input=True
+BP_Weapon_HeavyPistol_C.HLOD=True
+BP_Weapon_HeavyPistol_C.Physics=True
+BP_Weapon_HeavyPistol_C.WorldPartition=True
+BP_Weapon_HeavyPistol_C.Events=True
 
 [AssetEditorToolkitTabLocation]
 /Game/bodycamFPSkit/Blueprints/Weapons/Pistol/BP_Weapon_Pickup_Pistol.BP_Weapon_Pickup_Pistol=1
@@ -1847,6 +1877,7 @@ CanvasPanel.Localization=True
 /Game/bodycamFPSkit/Blueprints/Widgets/UI_MAINMENUSETTINGS.UI_MAINMENUSETTINGS=1
 /Game/bodycamFPSkit/Blueprints/Widgets/UI_KEYS.UI_KEYS=1
 /Game/bodycamFPSkit/Blueprints/Widgets/UI_MAINMENU.UI_MAINMENU=1
+/Game/bodycamFPSkit/Blueprints/Weapons/HeavyPistol/BP_Weapon_HeavyPistol.BP_Weapon_HeavyPistol=1
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
