Edit: default firing semi with draw debug for ballistics test

--- a/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -156,7 +156,8 @@ PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport3",ConfigSettin
 LastLevel=/Game/bodycamFPSkit/Maps/Map_Test
 
 [AssetEditorSubsystem]
-CleanShutdown=True
+CleanShutdown=False
+OpenAssetsAtExit=/Game/bodycamFPSkit/Blueprints/BP_Weapon_Base.BP_Weapon_Base
 
 [RootWindow]
 ScreenPosition=X=317.000 Y=177.000
@@ -1293,18 +1294,25 @@ AssetPropertyPicker.ThumbnailSize=2
 AssetPropertyPicker.CurrentViewType=0
 
 [ContentBrowserRecent]
-MRUItem0=/Game/bodycamFPSkit/Blueprints/Weapons/HeavyPistol/BP_Weapon_HeavyPistol
-MRUItem1=/Game/bodycamFPSkit/Blueprints/Weapons/PistolP226/BP_EBBullet_PistolP226
-MRUItem2=/Game/bodycamFPSkit/Blueprints/Widgets/UI_KEYS
-MRUItem3=/Game/bodycamFPSkit/Blueprints/Widgets/UI_MAINMENU
-MRUItem4=/Game/bodycamFPSkit/Blueprints/Widgets/UI_MAINMENUSETTINGS
-MRUItem5=/Game/bodycamFPSkit/Blueprints/Weapons/Pistol/BP_Weapon_Pickup_Pistol
-MRUItem6=/Game/bodycamFPSkit/Blueprints/Weapons/Pistol/BP_Weapon_Pistol
-MRUItem7=/Game/bodycamFPSkit/Blueprints/Weapons/BP_Weapon_Basic
-MRUItem8=/Game/bodycamFPSkit/Blueprints/BP_Weapon_Base
-MRUItem9=/Game/bodycamFPSkit/Blueprints/BP_FirstPersonCharacter
-MRUItem10=/Game/bodycamFPSkit/Maps/Map_Test
-MRUItem11=/Game/SCL_Assets/02_Lobby/Map/A02_Lobby
+MRUItem0=/Game/bodycamFPSkit/Blueprints/Widgets/UI_HUD
+MRUItem1=/Game/bodycamFPSkit/Blueprints/Weapons/HeavyPistol/BP_Weapon_HeavyPistol
+MRUItem2=/Game/bodycamFPSkit/Blueprints/Weapons/PistolX87/BP_Weapon_PistolX87
+MRUItem3=/Game/bodycamFPSkit/Blueprints/BP_Weapon_Base
+MRUItem4=/Game/bodycamFPSkit/Blueprints/Weapons/PistolX87/BP_Weapon_Pickup_PistolX87
+MRUItem5=/Game/bodycamFPSkit/Blueprints/Weapons/ENUM_WeaponSlots
+MRUItem6=/Game/bodycamFPSkit/Blueprints/Saves/ENUM_SaveSlots
+MRUItem7=/Game/bodycamFPSkit/Blueprints/Weapons/ENUM_Arms
+MRUItem8=/Game/bodycamFPSkit/Blueprints/Weapons/ENUM_LineTraceStyles
+MRUItem9=/Game/bodycamFPSkit/Blueprints/Weapons/BP_Weapon_Basic
+MRUItem10=/Game/bodycamFPSkit/Blueprints/Weapons/PistolP226/BP_EBBullet_PistolP226
+MRUItem11=/Game/bodycamFPSkit/Blueprints/Widgets/UI_KEYS
+MRUItem12=/Game/bodycamFPSkit/Blueprints/Widgets/UI_MAINMENU
+MRUItem13=/Game/bodycamFPSkit/Blueprints/Widgets/UI_MAINMENUSETTINGS
+MRUItem14=/Game/bodycamFPSkit/Blueprints/Weapons/Pistol/BP_Weapon_Pickup_Pistol
+MRUItem15=/Game/bodycamFPSkit/Blueprints/Weapons/Pistol/BP_Weapon_Pistol
+MRUItem16=/Game/bodycamFPSkit/Blueprints/BP_FirstPersonCharacter
+MRUItem17=/Game/bodycamFPSkit/Maps/Map_Test
+MRUItem18=/Game/SCL_Assets/02_Lobby/Map/A02_Lobby
 
 [MessageLog]
 LastLogListing=MapCheck
@@ -1868,6 +1876,54 @@ BP_Weapon_HeavyPistol_C.HLOD=True
 BP_Weapon_HeavyPistol_C.Physics=True
 BP_Weapon_HeavyPistol_C.WorldPartition=True
 BP_Weapon_HeavyPistol_C.Events=True
+BP_Weapon_PistolX87_C.Tick=True
+BP_Weapon_PistolX87_C.Weapon=True
+BP_Weapon_PistolX87_C.WeaponStats=True
+BP_Weapon_PistolX87_C.Default=True
+BP_Weapon_PistolX87_C.ADS=True
+BP_Weapon_PistolX87_C.WeaponClip=True
+BP_Weapon_PistolX87_C.Audio=True
+BP_Weapon_PistolX87_C.Procedural Anims=True
+BP_Weapon_PistolX87_C.Animations=True
+BP_Weapon_PistolX87_C.Fire Logic=True
+BP_Weapon_PistolX87_C.Weapon Stats=True
+BP_Weapon_PistolX87_C.Replication=True
+BP_Weapon_PistolX87_C.Rendering=True
+BP_Weapon_PistolX87_C.Collision=True
+BP_Weapon_PistolX87_C.Actor=True
+BP_Weapon_PistolX87_C.Input=True
+BP_Weapon_PistolX87_C.HLOD=True
+BP_Weapon_PistolX87_C.Physics=True
+BP_Weapon_PistolX87_C.WorldPartition=True
+BP_Weapon_PistolX87_C.Events=True
+UserDefinedEnum.Description=True
+UserDefinedEnum.Enumerators=True
+BP_Weapon_Pickup_PistolX87_C.Default=True
+BP_Weapon_Pickup_PistolX87_C.Tick=True
+BP_Weapon_Pickup_PistolX87_C.WeaponVars=True
+BP_Weapon_Pickup_PistolX87_C.Weapon Vars=True
+BP_Weapon_Pickup_PistolX87_C.Replication=True
+BP_Weapon_Pickup_PistolX87_C.Rendering=True
+BP_Weapon_Pickup_PistolX87_C.Collision=True
+BP_Weapon_Pickup_PistolX87_C.Actor=True
+BP_Weapon_Pickup_PistolX87_C.Input=True
+BP_Weapon_Pickup_PistolX87_C.HLOD=True
+BP_Weapon_Pickup_PistolX87_C.Physics=True
+BP_Weapon_Pickup_PistolX87_C.WorldPartition=True
+BP_Weapon_Pickup_PistolX87_C.Events=True
+UI_HUD_C.Default=True
+UI_HUD_C.Appearance=True
+UI_HUD_C.Input=True
+UI_HUD_C.Interaction=True
+UI_HUD_C.Designer=True
+UI_HUD_C.Performance=True
+UI_HUD_C.Layout=True
+UI_HUD_C.Behavior=True
+UI_HUD_C.Render Transform=True
+UI_HUD_C.Localization=True
+UI_HUD_C.Accessibility=True
+UI_HUD_C.Clipping=True
+UI_HUD_C.Navigation=True
 
 [AssetEditorToolkitTabLocation]
 /Game/bodycamFPSkit/Blueprints/Weapons/Pistol/BP_Weapon_Pickup_Pistol.BP_Weapon_Pickup_Pistol=1
@@ -1878,6 +1934,13 @@ BP_Weapon_HeavyPistol_C.Events=True
 /Game/bodycamFPSkit/Blueprints/Widgets/UI_KEYS.UI_KEYS=1
 /Game/bodycamFPSkit/Blueprints/Widgets/UI_MAINMENU.UI_MAINMENU=1
 /Game/bodycamFPSkit/Blueprints/Weapons/HeavyPistol/BP_Weapon_HeavyPistol.BP_Weapon_HeavyPistol=1
+/Game/bodycamFPSkit/Blueprints/Weapons/PistolX87/BP_Weapon_PistolX87.BP_Weapon_PistolX87=1
+/Game/bodycamFPSkit/Blueprints/Weapons/ENUM_LineTraceStyles.ENUM_LineTraceStyles=1
+/Game/bodycamFPSkit/Blueprints/Weapons/ENUM_Arms.ENUM_Arms=1
+/Game/bodycamFPSkit/Blueprints/Saves/ENUM_SaveSlots.ENUM_SaveSlots=1
+/Game/bodycamFPSkit/Blueprints/Weapons/ENUM_WeaponSlots.ENUM_WeaponSlots=1
+/Game/bodycamFPSkit/Blueprints/Weapons/PistolX87/BP_Weapon_Pickup_PistolX87.BP_Weapon_Pickup_PistolX87=1
+/Game/bodycamFPSkit/Blueprints/Widgets/UI_HUD.UI_HUD=1
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
