--- a/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -156,8 +156,7 @@ PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport3",ConfigSettin
 LastLevel=/Game/bodycamFPSkit/Maps/Map_Test
 
 [AssetEditorSubsystem]
-CleanShutdown=False
-OpenAssetsAtExit=/Game/bodycamFPSkit/Blueprints/BP_Weapon_Base.BP_Weapon_Base
+CleanShutdown=True
 
 [RootWindow]
 ScreenPosition=X=317.000 Y=177.000
@@ -1254,6 +1253,12 @@ SequencerWidgets.TimeStamp=2023.08.20-00.43.28
 SequencerWidgets.LastCompileMethod=Unknown
 UndoHistoryEditor.TimeStamp=2023.08.20-00.43.43
 UndoHistoryEditor.LastCompileMethod=Unknown
+SkeletonEditor.TimeStamp=2023.08.20-00.43.33
+SkeletonEditor.LastCompileMethod=Unknown
+PinnedCommandList.TimeStamp=2023.08.20-00.43.14
+PinnedCommandList.LastCompileMethod=Unknown
+PhysicsAssetEditor.TimeStamp=2023.08.20-00.43.13
+PhysicsAssetEditor.LastCompileMethod=Unknown
 
 [Python]
 LastDirectory=
@@ -1282,7 +1287,7 @@ ContentBrowserDrawer.VerticalSplitter.SlotSize1=0.75
 ContentBrowserDrawer.FavoriteSplitter.SlotSize0=0.200000003
 ContentBrowserDrawer.FavoriteSplitter.SlotSize1=0.800000012
 ContentBrowserDrawer.FavoriteSplitter.SlotSize2=0.400000006
-ContentBrowserDrawer.SelectedPaths=/Game/bodycamFPSkit/Blueprints/Weapons
+ContentBrowserDrawer.SelectedPaths=/Game/bodycamFPSkit
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 FavoritePaths=
@@ -1294,25 +1299,26 @@ AssetPropertyPicker.ThumbnailSize=2
 AssetPropertyPicker.CurrentViewType=0
 
 [ContentBrowserRecent]
-MRUItem0=/Game/bodycamFPSkit/Blueprints/Widgets/UI_HUD
-MRUItem1=/Game/bodycamFPSkit/Blueprints/Weapons/HeavyPistol/BP_Weapon_HeavyPistol
-MRUItem2=/Game/bodycamFPSkit/Blueprints/Weapons/PistolX87/BP_Weapon_PistolX87
-MRUItem3=/Game/bodycamFPSkit/Blueprints/BP_Weapon_Base
-MRUItem4=/Game/bodycamFPSkit/Blueprints/Weapons/PistolX87/BP_Weapon_Pickup_PistolX87
-MRUItem5=/Game/bodycamFPSkit/Blueprints/Weapons/ENUM_WeaponSlots
-MRUItem6=/Game/bodycamFPSkit/Blueprints/Saves/ENUM_SaveSlots
-MRUItem7=/Game/bodycamFPSkit/Blueprints/Weapons/ENUM_Arms
-MRUItem8=/Game/bodycamFPSkit/Blueprints/Weapons/ENUM_LineTraceStyles
-MRUItem9=/Game/bodycamFPSkit/Blueprints/Weapons/BP_Weapon_Basic
-MRUItem10=/Game/bodycamFPSkit/Blueprints/Weapons/PistolP226/BP_EBBullet_PistolP226
-MRUItem11=/Game/bodycamFPSkit/Blueprints/Widgets/UI_KEYS
-MRUItem12=/Game/bodycamFPSkit/Blueprints/Widgets/UI_MAINMENU
-MRUItem13=/Game/bodycamFPSkit/Blueprints/Widgets/UI_MAINMENUSETTINGS
-MRUItem14=/Game/bodycamFPSkit/Blueprints/Weapons/Pistol/BP_Weapon_Pickup_Pistol
-MRUItem15=/Game/bodycamFPSkit/Blueprints/Weapons/Pistol/BP_Weapon_Pistol
-MRUItem16=/Game/bodycamFPSkit/Blueprints/BP_FirstPersonCharacter
-MRUItem17=/Game/bodycamFPSkit/Maps/Map_Test
-MRUItem18=/Game/SCL_Assets/02_Lobby/Map/A02_Lobby
+MRUItem0=/Game/bodycamFPSkit/Blueprints/Weapons/PistolP226/pistol_p226_PhysicsAsset
+MRUItem1=/Game/bodycamFPSkit/Blueprints/Weapons/PistolP226/pistol_p226
+MRUItem2=/Game/bodycamFPSkit/Blueprints/Widgets/UI_HUD
+MRUItem3=/Game/bodycamFPSkit/Blueprints/Weapons/HeavyPistol/BP_Weapon_HeavyPistol
+MRUItem4=/Game/bodycamFPSkit/Blueprints/Weapons/PistolX87/BP_Weapon_PistolX87
+MRUItem5=/Game/bodycamFPSkit/Blueprints/BP_Weapon_Base
+MRUItem6=/Game/bodycamFPSkit/Blueprints/Weapons/PistolX87/BP_Weapon_Pickup_PistolX87
+MRUItem7=/Game/bodycamFPSkit/Blueprints/Weapons/ENUM_WeaponSlots
+MRUItem8=/Game/bodycamFPSkit/Blueprints/Saves/ENUM_SaveSlots
+MRUItem9=/Game/bodycamFPSkit/Blueprints/Weapons/ENUM_Arms
+MRUItem10=/Game/bodycamFPSkit/Blueprints/Weapons/ENUM_LineTraceStyles
+MRUItem11=/Game/bodycamFPSkit/Blueprints/Weapons/BP_Weapon_Basic
+MRUItem12=/Game/bodycamFPSkit/Blueprints/Weapons/PistolP226/BP_EBBullet_PistolP226
+MRUItem13=/Game/bodycamFPSkit/Blueprints/Widgets/UI_KEYS
+MRUItem14=/Game/bodycamFPSkit/Blueprints/Widgets/UI_MAINMENU
+MRUItem15=/Game/bodycamFPSkit/Blueprints/Widgets/UI_MAINMENUSETTINGS
+MRUItem16=/Game/bodycamFPSkit/Blueprints/Weapons/Pistol/BP_Weapon_Pickup_Pistol
+MRUItem17=/Game/bodycamFPSkit/Blueprints/Weapons/Pistol/BP_Weapon_Pistol
+MRUItem18=/Game/bodycamFPSkit/Blueprints/BP_FirstPersonCharacter
+MRUItem19=/Game/bodycamFPSkit/Maps/Map_Test
 
 [MessageLog]
 LastLogListing=MapCheck
@@ -1924,6 +1930,24 @@ UI_HUD_C.Localization=True
 UI_HUD_C.Accessibility=True
 UI_HUD_C.Clipping=True
 UI_HUD_C.Navigation=True
+SkeletalMesh.Material Slots=True
+SkeletalMesh.LODCustomMode=True
+SkeletalMesh.LOD0=True
+SkeletalMesh.LODSettings=True
+SkeletalMesh.Clothing=True
+SkeletalMesh.Mesh=True
+SkeletalMesh.AnimationRig=True
+SkeletalMesh.SkeletalMesh=True
+SkeletalMesh.Physics=True
+SkeletalMesh.ImportSettings=True
+SkeletalMesh.Lighting=True
+SkeletalMesh.SkinWeights=True
+SkeletalMesh.Animation=True
+SkeletalMesh.RayTracing=True
+SkeletalMesh.Sampling=True
+SkeletalMesh.Deformer=True
+PhysicsAssetGenerationSettings.Body Creation=True
+PhysicsAssetGenerationSettings.Constraint Creation=True
 
 [AssetEditorToolkitTabLocation]
 /Game/bodycamFPSkit/Blueprints/Weapons/Pistol/BP_Weapon_Pickup_Pistol.BP_Weapon_Pickup_Pistol=1
@@ -1941,6 +1965,8 @@ UI_HUD_C.Navigation=True
 /Game/bodycamFPSkit/Blueprints/Weapons/ENUM_WeaponSlots.ENUM_WeaponSlots=1
 /Game/bodycamFPSkit/Blueprints/Weapons/PistolX87/BP_Weapon_Pickup_PistolX87.BP_Weapon_Pickup_PistolX87=1
 /Game/bodycamFPSkit/Blueprints/Widgets/UI_HUD.UI_HUD=1
+/Game/bodycamFPSkit/Blueprints/Weapons/PistolP226/pistol_p226.pistol_p226=1
+/Game/bodycamFPSkit/Blueprints/Weapons/PistolP226/pistol_p226_PhysicsAsset.pistol_p226_PhysicsAsset=1
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -2177,4 +2203,57 @@ FrameNumberDisplayFormat=Seconds
 MovieRendererName=
 bAutoExpandNodesOnSelection=True
 TreeViewWidth=0.300000
+
+[/Script/UnrealEd.PersonaOptions]
+bAutoAlignFloorToMesh=True
+bAlwaysOpenAnimationAssetsInNewTab=False
+bMuteAudio=False
+bUseAudioAttenuation=True
+DefaultLocalAxesSelection=2
+DefaultBoneDrawSelection=1
+DefaultBoneColor=(R=0.000000,G=0.000000,B=0.025000,A=1.000000)
+SelectedBoneColor=(R=0.200000,G=1.000000,B=0.200000,A=1.000000)
+AffectedBoneColor=(R=1.000000,G=1.000000,B=1.000000,A=1.000000)
+DisabledBoneColor=(R=0.400000,G=0.400000,B=0.400000,A=1.000000)
+ParentOfSelectedBoneColor=(R=0.850000,G=0.450000,B=0.120000,A=1.000000)
+VirtualBoneColor=(R=0.400000,G=0.400000,B=1.000000,A=1.000000)
+SectionTimingNodeColor=(R=0.390000,G=0.390000,B=1.000000,A=0.750000)
+NotifyTimingNodeColor=(R=0.800000,G=0.100000,B=0.100000,A=1.000000)
+BranchingPointTimingNodeColor=(R=0.500000,G=1.000000,B=1.000000,A=1.000000)
+bPauseAnimationOnCameraMove=False
+bUseInlineSocketEditor=False
+bFlattenSkeletonHierarchyWhenFiltering=False
+bHideParentsWhenFiltering=True
+bExpandTreeOnSelection=True
+bAllowPreviewMeshCollectionsToSelectFromDifferentSkeletons=True
+bAllowPreviewMeshCollectionsToUseCustomAnimBP=False
+bAllowMeshSectionSelection=False
+NumFolderFiltersInAssetBrowser=2
+AssetEditorOptions=(Context="SkeletonEditor",ViewportConfigs[0]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[1]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[2]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[3]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""))
+AssetEditorOptions=(Context="SkeletalMeshEditor",ViewportConfigs[0]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[1]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[2]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[3]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""))
+AssetEditorOptions=(Context="AnimationEditor",ViewportConfigs[0]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[1]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[2]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[3]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""))
+AssetEditorOptions=(Context="AnimationBlueprintEditor",ViewportConfigs[0]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[1]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[2]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[3]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""))
+AssetEditorOptions=(Context="PhysicsAssetEditor",ViewportConfigs[0]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[1]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[2]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[3]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""))
+CurveEditorSnapInterval=0.010000
+TimelineScrubSnapValue=1000
+TimelineDisplayFormat=Frames
+bTimelineDisplayPercentage=True
+bTimelineDisplayFormatSecondary=True
+bTimelineDisplayCurveKeys=False
+TimelineEnabledSnaps=CompositeSegment
+TimelineEnabledSnaps=MontageSection
+bAllowIncompatibleSkeletonSelection=False
+bUseTreeViewForAnimationCurves=False
+AnimationCurveGroupingDelimiters="._/|\\"
+
+[/Script/PinnedCommandList.PinnedCommandListSettings]
+Contexts=(Name="SkeletalMeshEditor",Commands=)
+Contexts=(Name="SkeletalMeshEditor.Viewport0",Commands=)
+Contexts=(Name="PhysicsAssetEditor",Commands=)
+Contexts=(Name="PhysicsAssetEditor.Viewport0",Commands=)
+
+[DetailPropertyExpansion]
+PreviewMeshCollection="\"Object.SkeletalMeshes\" "
+DataAsset="\"Object.SkeletalMeshes\" "
+Object=
 
