--- a/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -156,7 +156,11 @@ PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport3",ConfigSettin
 LastLevel=/Game/bodycamFPSkit/Maps/Map_Test
 
 [AssetEditorSubsystem]
-CleanShutdown=True
+CleanShutdown=False
+OpenAssetsAtExit=/Game/bodycamFPSkit/Blueprints/Weapons/PistolX87/BP_WPickup_PistolX87.BP_WPickup_PistolX87
+OpenAssetsAtExit=/Game/bodycamFPSkit/Blueprints/Weapons/PistolP226/BP_Weapon_Pistol_P226.BP_Weapon_Pistol_P226
+OpenAssetsAtExit=/Game/bodycamFPSkit/Blueprints/Weapons/PistolX87/BP_Weapon_PistolX87.BP_Weapon_PistolX87
+OpenAssetsAtExit=/Game/bodycamFPSkit/Blueprints/Weapons/PistolP226/BP_WPickup_PistolP226.BP_WPickup_PistolP226
 
 [RootWindow]
 ScreenPosition=X=317.000 Y=177.000
@@ -1287,7 +1291,7 @@ ContentBrowserDrawer.VerticalSplitter.SlotSize1=0.75
 ContentBrowserDrawer.FavoriteSplitter.SlotSize0=0.200000003
 ContentBrowserDrawer.FavoriteSplitter.SlotSize1=0.800000012
 ContentBrowserDrawer.FavoriteSplitter.SlotSize2=0.400000006
-ContentBrowserDrawer.SelectedPaths=/Game/bodycamFPSkit
+ContentBrowserDrawer.SelectedPaths=/Game/bodycamFPSkit/Blueprints/Weapons/PistolX87
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 FavoritePaths=
@@ -1299,26 +1303,26 @@ AssetPropertyPicker.ThumbnailSize=2
 AssetPropertyPicker.CurrentViewType=0
 
 [ContentBrowserRecent]
-MRUItem0=/Game/bodycamFPSkit/Blueprints/Weapons/PistolP226/pistol_p226_PhysicsAsset
-MRUItem1=/Game/bodycamFPSkit/Blueprints/Weapons/PistolP226/pistol_p226
-MRUItem2=/Game/bodycamFPSkit/Blueprints/Widgets/UI_HUD
-MRUItem3=/Game/bodycamFPSkit/Blueprints/Weapons/HeavyPistol/BP_Weapon_HeavyPistol
-MRUItem4=/Game/bodycamFPSkit/Blueprints/Weapons/PistolX87/BP_Weapon_PistolX87
-MRUItem5=/Game/bodycamFPSkit/Blueprints/BP_Weapon_Base
-MRUItem6=/Game/bodycamFPSkit/Blueprints/Weapons/PistolX87/BP_Weapon_Pickup_PistolX87
-MRUItem7=/Game/bodycamFPSkit/Blueprints/Weapons/ENUM_WeaponSlots
-MRUItem8=/Game/bodycamFPSkit/Blueprints/Saves/ENUM_SaveSlots
-MRUItem9=/Game/bodycamFPSkit/Blueprints/Weapons/ENUM_Arms
-MRUItem10=/Game/bodycamFPSkit/Blueprints/Weapons/ENUM_LineTraceStyles
-MRUItem11=/Game/bodycamFPSkit/Blueprints/Weapons/BP_Weapon_Basic
-MRUItem12=/Game/bodycamFPSkit/Blueprints/Weapons/PistolP226/BP_EBBullet_PistolP226
-MRUItem13=/Game/bodycamFPSkit/Blueprints/Widgets/UI_KEYS
-MRUItem14=/Game/bodycamFPSkit/Blueprints/Widgets/UI_MAINMENU
-MRUItem15=/Game/bodycamFPSkit/Blueprints/Widgets/UI_MAINMENUSETTINGS
-MRUItem16=/Game/bodycamFPSkit/Blueprints/Weapons/Pistol/BP_Weapon_Pickup_Pistol
-MRUItem17=/Game/bodycamFPSkit/Blueprints/Weapons/Pistol/BP_Weapon_Pistol
-MRUItem18=/Game/bodycamFPSkit/Blueprints/BP_FirstPersonCharacter
-MRUItem19=/Game/bodycamFPSkit/Maps/Map_Test
+MRUItem0=/Game/bodycamFPSkit/Blueprints/Weapons/PistolP226/M_Pistol_P226
+MRUItem1=/Game/bodycamFPSkit/Blueprints/Weapons/PistolX87/BP_WPickup_PistolX87
+MRUItem2=/Game/bodycamFPSkit/Blueprints/Weapons/PistolX87/BP_Weapon_PistolX87
+MRUItem3=/Game/bodycamFPSkit/Blueprints/Weapons/PistolP226/BP_WPickup_PistolP226
+MRUItem4=/Game/bodycamFPSkit/Blueprints/BP_Weapon_Base
+MRUItem5=/Game/bodycamFPSkit/Blueprints/Weapons/BP_Weapon_Basic
+MRUItem6=/Game/bodycamFPSkit/Blueprints/Weapons/PistolP226/BP_Weapon_Pistol_P226
+MRUItem7=/Game/bodycamFPSkit/Blueprints/Weapons/BP_WPickup
+MRUItem8=/Game/bodycamFPSkit/Blueprints/Weapons/PistolX87/BP_Weapon_Pickup_PistolX87
+MRUItem9=/Game/bodycamFPSkit/Blueprints/Weapons/PistolP226/pistol_p226_PhysicsAsset
+MRUItem10=/Game/bodycamFPSkit/Blueprints/Weapons/PistolP226/pistol_p226
+MRUItem11=/Game/bodycamFPSkit/Blueprints/Widgets/UI_HUD
+MRUItem12=/Game/bodycamFPSkit/Blueprints/Weapons/HeavyPistol/BP_Weapon_HeavyPistol
+MRUItem13=/Game/bodycamFPSkit/Blueprints/Weapons/ENUM_WeaponSlots
+MRUItem14=/Game/bodycamFPSkit/Blueprints/Saves/ENUM_SaveSlots
+MRUItem15=/Game/bodycamFPSkit/Blueprints/Weapons/ENUM_Arms
+MRUItem16=/Game/bodycamFPSkit/Blueprints/Weapons/ENUM_LineTraceStyles
+MRUItem17=/Game/bodycamFPSkit/Blueprints/Weapons/PistolP226/BP_EBBullet_PistolP226
+MRUItem18=/Game/bodycamFPSkit/Blueprints/Widgets/UI_KEYS
+MRUItem19=/Game/bodycamFPSkit/Blueprints/Widgets/UI_MAINMENU
 
 [MessageLog]
 LastLogListing=MapCheck
@@ -1475,7 +1479,7 @@ BP_Weapon_Basic_C.WorldPartition=True
 BP_Weapon_Basic_C.Events=True
 SkeletalMeshComponent.Variable=True
 SkeletalMeshComponent.TransformCommon=True
-SkeletalMeshComponent.Sockets=True
+SkeletalMeshComponent.Sockets=False
 SkeletalMeshComponent.Animation=True
 SkeletalMeshComponent.Mesh=True
 SkeletalMeshComponent.ComponentTick=True
@@ -1948,6 +1952,70 @@ SkeletalMesh.Sampling=True
 SkeletalMesh.Deformer=True
 PhysicsAssetGenerationSettings.Body Creation=True
 PhysicsAssetGenerationSettings.Constraint Creation=True
+SkeletalMeshComponent.Materials=True
+SphereComponent.Variable=True
+SphereComponent.TransformCommon=True
+SphereComponent.Sockets=True
+SphereComponent.Shape=True
+SphereComponent.Navigation=True
+SphereComponent.HLOD=True
+SphereComponent.ComponentTick=True
+SphereComponent.Rendering=True
+SphereComponent.PathTracing=True
+SphereComponent.Physics=True
+SphereComponent.Collision=True
+SphereComponent.Tags=True
+SphereComponent.ComponentReplication=True
+SphereComponent.Cooking=True
+SphereComponent.Events=True
+BP_WPickup_PistolP226_C.Default=True
+BP_WPickup_PistolP226_C.Tick=True
+BP_WPickup_PistolP226_C.WeaponVars=True
+BP_WPickup_PistolP226_C.Weapon Vars=True
+BP_WPickup_PistolP226_C.Replication=True
+BP_WPickup_PistolP226_C.Rendering=True
+BP_WPickup_PistolP226_C.Collision=True
+BP_WPickup_PistolP226_C.Actor=True
+BP_WPickup_PistolP226_C.Input=True
+BP_WPickup_PistolP226_C.HLOD=True
+BP_WPickup_PistolP226_C.Physics=True
+BP_WPickup_PistolP226_C.WorldPartition=True
+BP_WPickup_PistolP226_C.Events=True
+BP_WPickup_PistolX87_C.Default=True
+BP_WPickup_PistolX87_C.Tick=True
+BP_WPickup_PistolX87_C.WeaponVars=True
+BP_WPickup_PistolX87_C.Weapon Vars=True
+BP_WPickup_PistolX87_C.Replication=True
+BP_WPickup_PistolX87_C.Rendering=True
+BP_WPickup_PistolX87_C.Collision=True
+BP_WPickup_PistolX87_C.Actor=True
+BP_WPickup_PistolX87_C.Input=True
+BP_WPickup_PistolX87_C.HLOD=True
+BP_WPickup_PistolX87_C.Physics=True
+BP_WPickup_PistolX87_C.WorldPartition=True
+BP_WPickup_PistolX87_C.Events=True
+K2Node_CallParentFunction.Graph=True
+K2Node_VariableGet.Events=True
+BP_Weapon_Pistol_P226_C.Tick=True
+BP_Weapon_Pistol_P226_C.Weapon=True
+BP_Weapon_Pistol_P226_C.WeaponStats=True
+BP_Weapon_Pistol_P226_C.Default=True
+BP_Weapon_Pistol_P226_C.ADS=True
+BP_Weapon_Pistol_P226_C.WeaponClip=True
+BP_Weapon_Pistol_P226_C.Audio=True
+BP_Weapon_Pistol_P226_C.Procedural Anims=True
+BP_Weapon_Pistol_P226_C.Animations=True
+BP_Weapon_Pistol_P226_C.Fire Logic=True
+BP_Weapon_Pistol_P226_C.Weapon Stats=True
+BP_Weapon_Pistol_P226_C.Replication=True
+BP_Weapon_Pistol_P226_C.Rendering=True
+BP_Weapon_Pistol_P226_C.Collision=True
+BP_Weapon_Pistol_P226_C.Actor=True
+BP_Weapon_Pistol_P226_C.Input=True
+BP_Weapon_Pistol_P226_C.HLOD=True
+BP_Weapon_Pistol_P226_C.Physics=True
+BP_Weapon_Pistol_P226_C.WorldPartition=True
+BP_Weapon_Pistol_P226_C.Events=True
 
 [AssetEditorToolkitTabLocation]
 /Game/bodycamFPSkit/Blueprints/Weapons/Pistol/BP_Weapon_Pickup_Pistol.BP_Weapon_Pickup_Pistol=1
@@ -1967,6 +2035,11 @@ PhysicsAssetGenerationSettings.Constraint Creation=True
 /Game/bodycamFPSkit/Blueprints/Widgets/UI_HUD.UI_HUD=1
 /Game/bodycamFPSkit/Blueprints/Weapons/PistolP226/pistol_p226.pistol_p226=1
 /Game/bodycamFPSkit/Blueprints/Weapons/PistolP226/pistol_p226_PhysicsAsset.pistol_p226_PhysicsAsset=1
+/Game/bodycamFPSkit/Blueprints/Weapons/PistolP226/BP_WPickup_PistolP226.BP_WPickup_PistolP226=1
+/Game/bodycamFPSkit/Blueprints/Weapons/BP_WPickup.BP_WPickup=1
+/Game/bodycamFPSkit/Blueprints/Weapons/PistolX87/BP_WPickup_PistolX87.BP_WPickup_PistolX87=1
+/Game/bodycamFPSkit/Blueprints/Weapons/PistolP226/M_Pistol_P226.M_Pistol_P226=1
+/Game/bodycamFPSkit/Blueprints/Weapons/PistolP226/BP_Weapon_Pistol_P226.BP_Weapon_Pistol_P226=1
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -2230,7 +2303,7 @@ bAllowPreviewMeshCollectionsToUseCustomAnimBP=False
 bAllowMeshSectionSelection=False
 NumFolderFiltersInAssetBrowser=2
 AssetEditorOptions=(Context="SkeletonEditor",ViewportConfigs[0]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[1]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[2]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[3]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""))
-AssetEditorOptions=(Context="SkeletalMeshEditor",ViewportConfigs[0]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[1]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[2]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[3]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""))
+AssetEditorOptions=(Context="SkeletalMeshEditor",ViewportConfigs[0]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=1,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[1]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[2]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[3]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""))
 AssetEditorOptions=(Context="AnimationEditor",ViewportConfigs[0]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[1]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[2]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[3]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""))
 AssetEditorOptions=(Context="AnimationBlueprintEditor",ViewportConfigs[0]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[1]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[2]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[3]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""))
 AssetEditorOptions=(Context="PhysicsAssetEditor",ViewportConfigs[0]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[1]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[2]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[3]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""))
@@ -2253,7 +2326,18 @@ Contexts=(Name="PhysicsAssetEditor",Commands=)
 Contexts=(Name="PhysicsAssetEditor.Viewport0",Commands=)
 
 [DetailPropertyExpansion]
-PreviewMeshCollection="\"Object.SkeletalMeshes\" "
-DataAsset="\"Object.SkeletalMeshes\" "
+PreviewMeshCollection=
+DataAsset=
 Object=
+BP_WPickup_PistolP226_C="\"Object.Weapon Vars.WeaponStats\" "
+BP_WPickup_C="\"Object.Weapon Vars.WeaponStats\" "
+BP_Interaction_Base_C="\"Object.Weapon Vars.WeaponStats\" "
+BP_WPickup_PistolX87_C="\"Object.Weapon Vars.WeaponStats\" "
+
+[PlacementMode]
+RecentlyPlaced=/Game/bodycamFPSkit/Blueprints/Weapons/PistolP226/BP_WPickup_PistolP226.BP_WPickup_PistolP226;
+
+[DetailCategoriesAdvanced]
+SkeletalMeshComponent.Animation=True
+BP_Weapon_Pistol_P226_C.WeaponStats=False
 
