Nightly: laser attachment WIP

--- a/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -156,9 +156,11 @@ PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport3",ConfigSettin
 LastLevel=/Game/bodycamFPSkit/Maps/Map_Test
 
 [AssetEditorSubsystem]
-CleanShutdown=False
+CleanShutdown=True
 OpenAssetsAtExit=/Game/bodycamFPSkit/Blueprints/Weapons/PistolP226/BP_Weapon_Pistol_P226.BP_Weapon_Pistol_P226
-OpenAssetsAtExit=/Game/bodycamFPSkit/Blueprints/BP_Weapon_Base.BP_Weapon_Base
+OpenAssetsAtExit=/Game/bodycamFPSkit/Blueprints/Weapons/Attachments/NFX_Attachment_Laser.NFX_Attachment_Laser
+OpenAssetsAtExit=/Game/bodycamFPSkit/Blueprints/Weapons/Attachments/BP_Attachment_Laser.BP_Attachment_Laser
+OpenAssetsAtExit=/Game/bodycamFPSkit/Blueprints/Weapons/PistolP226/M_Pistol_P226.M_Pistol_P226
 
 [RootWindow]
 ScreenPosition=X=317.000 Y=177.000
@@ -1301,26 +1303,26 @@ AssetPropertyPicker.ThumbnailSize=2
 AssetPropertyPicker.CurrentViewType=0
 
 [ContentBrowserRecent]
-MRUItem0=/Game/bodycamFPSkit/Blueprints/BP_Weapon_Base
-MRUItem1=/Game/bodycamFPSkit/Blueprints/Weapons/PistolP226/BP_Weapon_Pistol_P226
-MRUItem2=/Game/bodycamFPSkit/Blueprints/BP_FirstPersonCharacter
-MRUItem3=/Game/bodycamFPSkit/Blueprints/Weapons/BP_Weapon_Basic
-MRUItem4=/Game/bodycamFPSkit/Blueprints/Weapons/PistolP226/M_Pistol_P226
-MRUItem5=/Game/bodycamFPSkit/Blueprints/Weapons/PistolX87/BP_WPickup_PistolX87
-MRUItem6=/Game/bodycamFPSkit/Blueprints/Weapons/PistolX87/BP_Weapon_PistolX87
-MRUItem7=/Game/bodycamFPSkit/Blueprints/Weapons/PistolP226/BP_WPickup_PistolP226
-MRUItem8=/Game/bodycamFPSkit/Blueprints/Weapons/BP_WPickup
-MRUItem9=/Game/bodycamFPSkit/Blueprints/Weapons/PistolX87/BP_Weapon_Pickup_PistolX87
-MRUItem10=/Game/bodycamFPSkit/Blueprints/Weapons/PistolP226/pistol_p226_PhysicsAsset
-MRUItem11=/Game/bodycamFPSkit/Blueprints/Weapons/PistolP226/pistol_p226
-MRUItem12=/Game/bodycamFPSkit/Blueprints/Widgets/UI_HUD
-MRUItem13=/Game/bodycamFPSkit/Blueprints/Weapons/HeavyPistol/BP_Weapon_HeavyPistol
-MRUItem14=/Game/bodycamFPSkit/Blueprints/Weapons/ENUM_WeaponSlots
-MRUItem15=/Game/bodycamFPSkit/Blueprints/Saves/ENUM_SaveSlots
-MRUItem16=/Game/bodycamFPSkit/Blueprints/Weapons/ENUM_Arms
-MRUItem17=/Game/bodycamFPSkit/Blueprints/Weapons/ENUM_LineTraceStyles
-MRUItem18=/Game/bodycamFPSkit/Blueprints/Weapons/PistolP226/BP_EBBullet_PistolP226
-MRUItem19=/Game/bodycamFPSkit/Blueprints/Widgets/UI_KEYS
+MRUItem0=/Game/bodycamFPSkit/Blueprints/Weapons/PistolP226/M_Pistol_P226
+MRUItem1=/Game/bodycamFPSkit/Blueprints/Weapons/PistolX87/BP_Weapon_PistolX87
+MRUItem2=/Game/bodycamFPSkit/Blueprints/BP_Weapon_Base
+MRUItem3=/Game/bodycamFPSkit/Blueprints/Weapons/PistolP226/BP_WPickup_PistolP226
+MRUItem4=/Game/bodycamFPSkit/Blueprints/Weapons/Attachments/BP_Attachment_Laser
+MRUItem5=/Niagara/Modules/Update/Color/Color
+MRUItem6=/Game/bodycamFPSkit/Blueprints/Weapons/Attachments/NFX_Attachment_Laser
+MRUItem7=/Game/bodycamFPSkit/Blueprints/Weapons/PistolP226/BP_Weapon_Pistol_P226
+MRUItem8=/Game/bodycamFPSkit/Blueprints/BP_FirstPersonCharacter
+MRUItem9=/Game/bodycamFPSkit/Blueprints/Weapons/BP_Weapon_Basic
+MRUItem10=/Game/bodycamFPSkit/Blueprints/Weapons/PistolX87/BP_WPickup_PistolX87
+MRUItem11=/Game/bodycamFPSkit/Blueprints/Weapons/BP_WPickup
+MRUItem12=/Game/bodycamFPSkit/Blueprints/Weapons/PistolX87/BP_Weapon_Pickup_PistolX87
+MRUItem13=/Game/bodycamFPSkit/Blueprints/Weapons/PistolP226/pistol_p226_PhysicsAsset
+MRUItem14=/Game/bodycamFPSkit/Blueprints/Weapons/PistolP226/pistol_p226
+MRUItem15=/Game/bodycamFPSkit/Blueprints/Widgets/UI_HUD
+MRUItem16=/Game/bodycamFPSkit/Blueprints/Weapons/HeavyPistol/BP_Weapon_HeavyPistol
+MRUItem17=/Game/bodycamFPSkit/Blueprints/Weapons/ENUM_WeaponSlots
+MRUItem18=/Game/bodycamFPSkit/Blueprints/Saves/ENUM_SaveSlots
+MRUItem19=/Game/bodycamFPSkit/Blueprints/Weapons/ENUM_Arms
 
 [MessageLog]
 LastLogListing=MapCheck
@@ -2019,6 +2021,55 @@ K2Node_CallFunction.Inputs=True
 K2Node_CallFunction.Outputs=True
 PropertyWrapper.Variable=True
 PropertyWrapper.DefaultValueCategory=True
+NiagaraScript.Script=True
+NiagaraScript.Validation=True
+NiagaraScript.NiagaraScript_InputParams=True
+NiagaraScript.NiagaraScript_OutputParams=True
+BP_Attachment_Laser_C.Tick=True
+BP_Attachment_Laser_C.Replication=True
+BP_Attachment_Laser_C.Rendering=True
+BP_Attachment_Laser_C.Collision=True
+BP_Attachment_Laser_C.Actor=True
+BP_Attachment_Laser_C.Input=True
+BP_Attachment_Laser_C.HLOD=True
+BP_Attachment_Laser_C.Physics=True
+BP_Attachment_Laser_C.WorldPartition=True
+BP_Attachment_Laser_C.Events=True
+SceneComponent.Variable=True
+SceneComponent.TransformCommon=True
+SceneComponent.Sockets=True
+SceneComponent.Rendering=True
+SceneComponent.ComponentTick=True
+SceneComponent.Tags=True
+SceneComponent.ComponentReplication=True
+SceneComponent.Activation=True
+SceneComponent.Cooking=True
+SceneComponent.Events=True
+NiagaraComponent.Variable=True
+NiagaraComponent.TransformCommon=True
+NiagaraComponent.Sockets=True
+NiagaraComponent.Niagara=True
+NiagaraComponent.NiagaraComponent_Utilities=True
+NiagaraComponent.Activation=True
+NiagaraComponent.Lighting=True
+NiagaraComponent.Attachment=True
+NiagaraComponent.Randomness=True
+NiagaraComponent.Parameters=True
+NiagaraComponent.Warmup=True
+NiagaraComponent.ComponentTick=True
+NiagaraComponent.Compilation=True
+NiagaraComponent.HLOD=True
+NiagaraComponent.Rendering=True
+NiagaraComponent.PathTracing=True
+NiagaraComponent.Navigation=True
+NiagaraComponent.Tags=True
+NiagaraComponent.ComponentReplication=True
+NiagaraComponent.Cooking=True
+NiagaraComponent.Events=True
+NiagaraComponent.NiagaraComponent_Parameters=True
+K2Node_CustomEvent.GraphNodeDetail=True
+K2Node_CustomEvent.Graph=True
+K2Node_CustomEvent.Inputs=True
 
 [AssetEditorToolkitTabLocation]
 /Game/bodycamFPSkit/Blueprints/Weapons/Pistol/BP_Weapon_Pickup_Pistol.BP_Weapon_Pickup_Pistol=1
@@ -2044,6 +2095,9 @@ PropertyWrapper.DefaultValueCategory=True
 /Game/bodycamFPSkit/Blueprints/Weapons/PistolP226/M_Pistol_P226.M_Pistol_P226=1
 /Game/bodycamFPSkit/Blueprints/Weapons/PistolP226/BP_Weapon_Pistol_P226.BP_Weapon_Pistol_P226=1
 /Game/bodycamFPSkit/Blueprints/BP_FirstPersonCharacter.BP_FirstPersonCharacter=1
+/Niagara/Modules/Update/Color/Color.Color=1
+/Game/bodycamFPSkit/Blueprints/Weapons/Attachments/NFX_Attachment_Laser.NFX_Attachment_Laser=1
+/Game/bodycamFPSkit/Blueprints/Weapons/Attachments/BP_Attachment_Laser.BP_Attachment_Laser=1
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -2343,5 +2397,7 @@ RecentlyPlaced=/Game/bodycamFPSkit/Blueprints/Weapons/PistolP226/BP_WPickup_Pist
 
 [DetailCategoriesAdvanced]
 SkeletalMeshComponent.Animation=True
-BP_Weapon_Pistol_P226_C.WeaponStats=True
+BP_Weapon_Pistol_P226_C.WeaponStats=False
+PropertyWrapper.Variable=False
+BP_WPickup_PistolP226_C.Collision=False
 
