--- a/huture_testbranch.uproject
+++ b/huture_testbranch.uproject
@@ -29,6 +29,11 @@
 				"Win64",
 				"Mac"
 			]
+		},
+		{
+			"Name": "EasyBallistics",
+			"Enabled": true,
+			"MarketplaceURL": "com.epicgames.launcher://ue/marketplace/content/bbecde0f66914263b57fd2af5a0c7ffe"
 		}
 	]
 }
