Edit: update laser attachment bp

--- a/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -158,9 +158,6 @@ LastLevel=/Game/bodycamFPSkit/Maps/Map_Test
 
 [AssetEditorSubsystem]
 CleanShutdown=False
-OpenAssetsAtExit=/Game/bodycamFPSkit/Blueprints/Weapons/Attachments/Laser_Compact_0/BP_Attachment_Laser_Compact_0.BP_Attachment_Laser_Compact_0
-OpenAssetsAtExit=/Game/bodycamFPSkit/Blueprints/Weapons/Pistols/Pistol_P226/SK_Pistol_P226.SK_Pistol_P226
-OpenAssetsAtExit=/Game/bodycamFPSkit/Blueprints/BP_Interaction_Base.BP_Interaction_Base
 
 [RootWindow]
 ScreenPosition=X=317.000 Y=177.000
@@ -1265,6 +1262,8 @@ PhysicsAssetEditor.TimeStamp=2023.08.20-00.43.13
 PhysicsAssetEditor.LastCompileMethod=Unknown
 MaterialEditor.TimeStamp=2023.08.20-00.43.02
 MaterialEditor.LastCompileMethod=Unknown
+EasyBallistics.TimeStamp=2023.09.10-05.56.06
+EasyBallistics.LastCompileMethod=Unknown
 
 [Python]
 LastDirectory=
@@ -1299,7 +1298,7 @@ ContentBrowserDrawer.VerticalSplitter.SlotSize1=0.75
 ContentBrowserDrawer.FavoriteSplitter.SlotSize0=0.200000003
 ContentBrowserDrawer.FavoriteSplitter.SlotSize1=0.800000012
 ContentBrowserDrawer.FavoriteSplitter.SlotSize2=0.400000006
-ContentBrowserDrawer.SelectedPaths=/Game/bodycamFPSkit/Blueprints
+ContentBrowserDrawer.SelectedPaths=/Game/bodycamFPSkit/Blueprints/Weapons
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 FavoritePaths=
@@ -1376,29 +1375,29 @@ ContentBrowserTab3.ThumbnailSize=2
 ContentBrowserTab3.CurrentViewType=1
 
 [ContentBrowserRecent]
-MRUItem0=/Game/bodycamFPSkit/Blueprints/BP_Weapon_Base
-MRUItem1=/Game/bodycamFPSkit/Blueprints/BP_Cylinder
-MRUItem2=/Game/bodycamFPSkit/Blueprints/INT_Interaction
-MRUItem3=/Game/bodycamFPSkit/Blueprints/BP_Interaction_Base
-MRUItem4=/Game/bodycamFPSkit/Blueprints/Weapons/BP_Ammo_Pickup
-MRUItem5=/Game/bodycamFPSkit/Blueprints/Widgets/UI_HUD
-MRUItem6=/Game/bodycamFPSkit/Blueprints/Weapons/Pistols/Pistol_X87/BP_WPickup_PistolX87
+MRUItem0=/Game/bodycamFPSkit/Blueprints/Weapons/Attachments/Laser_Compact_0/BP_Attachment_Laser_Compact_0
+MRUItem1=/Game/bodycamFPSkit/Blueprints/Weapons/BP_Pickup_Attachment
+MRUItem2=/Game/bodycamFPSkit/Blueprints/Weapons/BP_Weapon_Basic
+MRUItem3=/Game/bodycamFPSkit/Blueprints/Weapons/BP_WPickup
+MRUItem4=/Game/bodycamFPSkit/Blueprints/BP_Weapon_Base
+MRUItem5=/Game/bodycamFPSkit/Blueprints/BP_FirstPersonCharacter
+MRUItem6=/Game/bodycamFPSkit/Blueprints/Weapons/BP_LaserPickup
 MRUItem7=/Game/bodycamFPSkit/Blueprints/Weapons/Pistols/Pistol_P226/BP_WPickup_PistolP226
-MRUItem8=/Game/bodycamFPSkit/Blueprints/BP_FirstPersonCharacter
-MRUItem9=/Game/bodycamFPSkit/Blueprints/Weapons/BP_Weapon_Basic
-MRUItem10=/Game/bodycamFPSkit/Blueprints/Weapons/BP_WPickup
-MRUItem11=/Game/bodycamFPSkit/Blueprints/Weapons/Attachments/Laser_Compact_0/NFX_Attachment_Laser_Compact_0
-MRUItem12=/Game/bodycamFPSkit/Blueprints/Weapons/Pistols/Pistol_P226/BP_Weapon_Pistol_P226
-MRUItem13=/Game/bodycamFPSkit/Blueprints/Weapons/Attachments/Laser_Compact_0/BP_Attachment_Laser_Compact_0
-MRUItem14=/Game/bodycamFPSkit/Blueprints/Weapons/Pistols/Pistol_P226/SK_Pistol_P226
-MRUItem15=/Game/bodycamFPSkit/BP_AI_skyhunter_example
-MRUItem16=/Game/bodycamFPSkit/BP_BulletProjectile_9mm
-MRUItem17=/Game/bodycamFPSkit/NewBlueprint
-MRUItem18=/Game/bodycamFPSkit/Blueprints/Weapons/Pistols/Pistol_P226/Mat_PistolP226_Bullet_4
-MRUItem19=/Game/bodycamFPSkit/Blueprints/Weapons/Pistols/Pistol_X87/BP_Weapon_PistolX87
+MRUItem8=/Game/bodycamFPSkit/Blueprints/BP_Interaction_Base
+MRUItem9=/Game/bodycamFPSkit/Blueprints/INT_Interaction
+MRUItem10=/Game/bodycamFPSkit/Blueprints/BP_Cylinder
+MRUItem11=/Game/bodycamFPSkit/Blueprints/Weapons/BP_Ammo_Pickup
+MRUItem12=/Game/bodycamFPSkit/Blueprints/Widgets/UI_HUD
+MRUItem13=/Game/bodycamFPSkit/Blueprints/Weapons/Pistols/Pistol_X87/BP_WPickup_PistolX87
+MRUItem14=/Game/bodycamFPSkit/Blueprints/Weapons/Attachments/Laser_Compact_0/NFX_Attachment_Laser_Compact_0
+MRUItem15=/Game/bodycamFPSkit/Blueprints/Weapons/Pistols/Pistol_P226/BP_Weapon_Pistol_P226
+MRUItem16=/Game/bodycamFPSkit/Blueprints/Weapons/Pistols/Pistol_P226/SK_Pistol_P226
+MRUItem17=/Game/bodycamFPSkit/BP_AI_skyhunter_example
+MRUItem18=/Game/bodycamFPSkit/BP_BulletProjectile_9mm
+MRUItem19=/Game/bodycamFPSkit/NewBlueprint
 
 [MessageLog]
-LastLogListing=FBXImport
+LastLogListing=PIE
 
 [DetailCategories]
 BP_Weapon_Pickup_Pistol_C.Default=True
@@ -2316,6 +2315,32 @@ BP_Cylinder_C.HLOD=True
 BP_Cylinder_C.Physics=True
 BP_Cylinder_C.WorldPartition=True
 BP_Cylinder_C.Events=True
+BP_Pickup_Attachment_C.Default=True
+BP_Pickup_Attachment_C.Tick=True
+BP_Pickup_Attachment_C.Weapon Vars=True
+BP_Pickup_Attachment_C.WeaponVars=True
+BP_Pickup_Attachment_C.Replication=True
+BP_Pickup_Attachment_C.Rendering=True
+BP_Pickup_Attachment_C.Collision=True
+BP_Pickup_Attachment_C.Actor=True
+BP_Pickup_Attachment_C.Input=True
+BP_Pickup_Attachment_C.HLOD=True
+BP_Pickup_Attachment_C.Physics=True
+BP_Pickup_Attachment_C.WorldPartition=True
+BP_Pickup_Attachment_C.Events=True
+BP_LaserPickup_C.Default=True
+BP_LaserPickup_C.Tick=True
+BP_LaserPickup_C.Weapon Vars=True
+BP_LaserPickup_C.WeaponVars=True
+BP_LaserPickup_C.Replication=True
+BP_LaserPickup_C.Rendering=True
+BP_LaserPickup_C.Collision=True
+BP_LaserPickup_C.Actor=True
+BP_LaserPickup_C.Input=True
+BP_LaserPickup_C.HLOD=True
+BP_LaserPickup_C.Physics=True
+BP_LaserPickup_C.WorldPartition=True
+BP_LaserPickup_C.Events=True
 
 [AssetEditorToolkitTabLocation]
 /Game/bodycamFPSkit/Blueprints/Weapons/Pistol/BP_Weapon_Pickup_Pistol.BP_Weapon_Pickup_Pistol=1
@@ -2364,6 +2389,8 @@ BP_Cylinder_C.Events=True
 /Game/bodycamFPSkit/Blueprints/INT_Interaction.INT_Interaction=1
 /Game/bodycamFPSkit/Blueprints/Weapons/Attachments/Laser_Compact_0/NFX_Attachment_Laser_Compact_0.NFX_Attachment_Laser_Compact_0=1
 /Game/bodycamFPSkit/Blueprints/BP_Cylinder.BP_Cylinder=1
+/Game/bodycamFPSkit/Blueprints/Weapons/BP_Pickup_Attachment.BP_Pickup_Attachment=1
+/Game/bodycamFPSkit/Blueprints/Weapons/BP_LaserPickup.BP_LaserPickup=1
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -2682,6 +2709,7 @@ SceneComponent=
 ActorComponent=
 InputSettings=
 SphereComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[7]\" "
+BP_Pickup_Attachment_C="\"Object.Weapon Vars.WeaponStats\" "
 
 [PlacementMode]
 RecentlyPlaced=/Game/bodycamFPSkit/Blueprints/BP_Cylinder.BP_Cylinder;
