Add: gameplay tags for attachment socket system

--- a/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -158,6 +158,7 @@ LastLevel=/Game/bodycamFPSkit/Maps/Map_Test
 
 [AssetEditorSubsystem]
 CleanShutdown=False
+OpenAssetsAtExit=/Game/FPS_Weapons/FPS_Weapon_Bundle/Weapons/Meshes/Attachments/BP_Suppressor_0.BP_Suppressor_0
 
 [RootWindow]
 ScreenPosition=X=317.000 Y=177.000
@@ -1264,6 +1265,8 @@ MaterialEditor.TimeStamp=2023.08.20-00.43.02
 MaterialEditor.LastCompileMethod=Unknown
 EasyBallistics.TimeStamp=2023.09.10-05.56.06
 EasyBallistics.LastCompileMethod=Unknown
+AttachmentSync.TimeStamp=2023.09.18-22.38.41
+AttachmentSync.LastCompileMethod=Unknown
 
 [Python]
 LastDirectory=
@@ -1298,7 +1301,7 @@ ContentBrowserDrawer.VerticalSplitter.SlotSize1=0.75
 ContentBrowserDrawer.FavoriteSplitter.SlotSize0=0.200000003
 ContentBrowserDrawer.FavoriteSplitter.SlotSize1=0.800000012
 ContentBrowserDrawer.FavoriteSplitter.SlotSize2=0.400000006
-ContentBrowserDrawer.SelectedPaths=/Game/bodycamFPSkit/Blueprints/Weapons/Rifles
+ContentBrowserDrawer.SelectedPaths=/Game/FPS_Weapons/FPS_Weapon_Bundle/Weapons/Meshes/Attachments
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 FavoritePaths=
@@ -1375,26 +1378,26 @@ ContentBrowserTab3.ThumbnailSize=2
 ContentBrowserTab3.CurrentViewType=1
 
 [ContentBrowserRecent]
-MRUItem0=/Game/FPS_Weapons/FPS_Weapon_Bundle/Weapons/Meshes/Ka47/BP_AS_Attachment_Silencer
-MRUItem1=/Game/bodycamFPSkit/Blueprints/Weapons/Attachments/Laser_Compact_0/BP_Attachment_Laser_Compact_0
-MRUItem2=/Game/bodycamFPSkit/Blueprints/Weapons/BP_Pickup_Attachment
-MRUItem3=/Game/bodycamFPSkit/Blueprints/Weapons/BP_Weapon_Basic
-MRUItem4=/Game/bodycamFPSkit/Blueprints/Weapons/BP_WPickup
-MRUItem5=/Game/bodycamFPSkit/Blueprints/BP_Weapon_Base
-MRUItem6=/Game/bodycamFPSkit/Blueprints/BP_FirstPersonCharacter
-MRUItem7=/Game/bodycamFPSkit/Blueprints/Weapons/BP_LaserPickup
-MRUItem8=/Game/bodycamFPSkit/Blueprints/Weapons/Pistols/Pistol_P226/BP_WPickup_PistolP226
-MRUItem9=/Game/bodycamFPSkit/Blueprints/BP_Interaction_Base
-MRUItem10=/Game/bodycamFPSkit/Blueprints/INT_Interaction
-MRUItem11=/Game/bodycamFPSkit/Blueprints/BP_Cylinder
-MRUItem12=/Game/bodycamFPSkit/Blueprints/Weapons/BP_Ammo_Pickup
-MRUItem13=/Game/bodycamFPSkit/Blueprints/Widgets/UI_HUD
-MRUItem14=/Game/bodycamFPSkit/Blueprints/Weapons/Pistols/Pistol_X87/BP_WPickup_PistolX87
-MRUItem15=/Game/bodycamFPSkit/Blueprints/Weapons/Attachments/Laser_Compact_0/NFX_Attachment_Laser_Compact_0
-MRUItem16=/Game/bodycamFPSkit/Blueprints/Weapons/Pistols/Pistol_P226/BP_Weapon_Pistol_P226
-MRUItem17=/Game/bodycamFPSkit/Blueprints/Weapons/Pistols/Pistol_P226/SK_Pistol_P226
-MRUItem18=/Game/bodycamFPSkit/BP_AI_skyhunter_example
-MRUItem19=/Game/bodycamFPSkit/BP_BulletProjectile_9mm
+MRUItem0=/Game/FPS_Weapons/FPS_Weapon_Bundle/Weapons/Meshes/Attachments/BP_Suppressor_0
+MRUItem1=/Game/FPS_Weapons/FPS_Weapon_Bundle/Weapons/Meshes/AK47/SK_AK47_Skeleton1
+MRUItem2=/Game/FPS_Weapons/FPS_Weapon_Bundle/Weapons/Meshes/AK47/SK_AK47_X_Skeleton
+MRUItem3=/Game/FPS_Weapons/FPS_Weapon_Bundle/Weapons/Meshes/AK47/SK_AK47_Skeleton
+MRUItem4=/Game/FPS_Weapons/FPS_Weapon_Bundle/Weapons/Meshes/AK47/BP_AK47
+MRUItem5=/Game/FPS_Weapons/FPS_Weapon_Bundle/Weapons/Materials/Master_Material/Mat_Weapon_Master_USE
+MRUItem6=/Game/FPS_Weapons/FPS_Weapon_Bundle/Weapons/Materials/AK47/Mati_AK47
+MRUItem7=/Game/FPS_Weapons/FPS_Weapon_Bundle/Weapons/Meshes/AK47/SK_AK47
+MRUItem8=/Game/FPS_Weapons/FPS_Weapon_Bundle/Weapons/Meshes/Ka47/BP_AS_Attachment_Silencer
+MRUItem9=/Game/bodycamFPSkit/Blueprints/Weapons/Attachments/Laser_Compact_0/BP_Attachment_Laser_Compact_0
+MRUItem10=/Game/bodycamFPSkit/Blueprints/Weapons/BP_Pickup_Attachment
+MRUItem11=/Game/bodycamFPSkit/Blueprints/Weapons/BP_Weapon_Basic
+MRUItem12=/Game/bodycamFPSkit/Blueprints/Weapons/BP_WPickup
+MRUItem13=/Game/bodycamFPSkit/Blueprints/BP_Weapon_Base
+MRUItem14=/Game/bodycamFPSkit/Blueprints/BP_FirstPersonCharacter
+MRUItem15=/Game/bodycamFPSkit/Blueprints/Weapons/BP_LaserPickup
+MRUItem16=/Game/bodycamFPSkit/Blueprints/Weapons/Pistols/Pistol_P226/BP_WPickup_PistolP226
+MRUItem17=/Game/bodycamFPSkit/Blueprints/BP_Interaction_Base
+MRUItem18=/Game/bodycamFPSkit/Blueprints/INT_Interaction
+MRUItem19=/Game/bodycamFPSkit/Blueprints/BP_Cylinder
 
 [MessageLog]
 LastLogListing=PIE
@@ -2352,6 +2355,50 @@ BP_AS_Attachment_Silencer_C.HLOD=True
 BP_AS_Attachment_Silencer_C.Physics=True
 BP_AS_Attachment_Silencer_C.WorldPartition=True
 BP_AS_Attachment_Silencer_C.Events=True
+BP_AK47_C.Tick=True
+BP_AK47_C.Replication=True
+BP_AK47_C.Rendering=True
+BP_AK47_C.Collision=True
+BP_AK47_C.Actor=True
+BP_AK47_C.Input=True
+BP_AK47_C.HLOD=True
+BP_AK47_C.Physics=True
+BP_AK47_C.WorldPartition=True
+BP_AK47_C.Events=True
+MaterialEditorInstanceConstant.General=True
+MaterialEditorInstanceConstant.Previewing=True
+MaterialExpressionStaticSwitchParameter.General=True
+MaterialExpressionStaticSwitchParameter.MaterialExpressionStaticBoolParameter=True
+MaterialExpressionStaticSwitchParameter.MaterialExpression=True
+MaterialExpression.MaterialExpression=True
+MaterialExpressionTextureSampleParameter2D.General=True
+MaterialExpressionTextureSampleParameter2D.MaterialExpression=True
+MaterialExpressionTextureSampleParameter2D.ParameterCustomization=True
+MaterialExpressionTextureSampleParameter2D.MaterialExpressionTextureSample=True
+MaterialExpressionTextureSampleParameter2D.MaterialExpressionTextureBase=True
+AttachmentSyncComponent.Variable=True
+AttachmentSyncComponent.Sockets=True
+AttachmentSyncComponent.AttachmentName=True
+AttachmentSyncComponent.AttachmentSync=True
+AttachmentSyncComponent.Tags=True
+AttachmentSyncComponent.ComponentTick=True
+AttachmentSyncComponent.ComponentReplication=True
+AttachmentSyncComponent.Activation=True
+AttachmentSyncComponent.Cooking=True
+AttachmentSyncComponent.Events=True
+BP_Suppressor_0_C.AttachmentSync=True
+BP_Suppressor_0_C.Tick=True
+BP_Suppressor_0_C.Replication=True
+BP_Suppressor_0_C.Rendering=True
+BP_Suppressor_0_C.Collision=True
+BP_Suppressor_0_C.Actor=True
+BP_Suppressor_0_C.Input=True
+BP_Suppressor_0_C.HLOD=True
+BP_Suppressor_0_C.Physics=True
+BP_Suppressor_0_C.WorldPartition=True
+BP_Suppressor_0_C.Events=True
+BoneProxy.Bone=True
+BoneProxy.Transforms=True
 
 [AssetEditorToolkitTabLocation]
 /Game/bodycamFPSkit/Blueprints/Weapons/Pistol/BP_Weapon_Pickup_Pistol.BP_Weapon_Pickup_Pistol=1
@@ -2402,6 +2449,14 @@ BP_AS_Attachment_Silencer_C.Events=True
 /Game/bodycamFPSkit/Blueprints/BP_Cylinder.BP_Cylinder=1
 /Game/bodycamFPSkit/Blueprints/Weapons/BP_Pickup_Attachment.BP_Pickup_Attachment=1
 /Game/bodycamFPSkit/Blueprints/Weapons/BP_LaserPickup.BP_LaserPickup=1
+/Game/FPS_Weapons/FPS_Weapon_Bundle/Weapons/Meshes/AK47/SK_AK47.SK_AK47=1
+/Game/FPS_Weapons/FPS_Weapon_Bundle/Weapons/Materials/AK47/Mati_AK47.Mati_AK47=1
+/Game/FPS_Weapons/FPS_Weapon_Bundle/Weapons/Materials/Master_Material/Mat_Weapon_Master_USE.Mat_Weapon_Master_USE=1
+/Game/FPS_Weapons/FPS_Weapon_Bundle/Weapons/Meshes/AK47/BP_AK47.BP_AK47=1
+/Game/FPS_Weapons/FPS_Weapon_Bundle/Weapons/Meshes/Attachments/BP_Suppressor_0.BP_Suppressor_0=1
+/Game/FPS_Weapons/FPS_Weapon_Bundle/Weapons/Meshes/AK47/SK_AK47_Skeleton.SK_AK47_Skeleton=1
+/Game/FPS_Weapons/FPS_Weapon_Bundle/Weapons/Meshes/AK47/SK_AK47_X_Skeleton.SK_AK47_X_Skeleton=1
+/Game/FPS_Weapons/FPS_Weapon_Bundle/Weapons/Meshes/AK47/SK_AK47_Skeleton1.SK_AK47_Skeleton1=1
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -2572,6 +2627,7 @@ MovieSceneTakeSettings=
 TakeRecorderMicrophoneAudioSourceSettings=
 MovieSceneAnimationTrackRecorderEditorSettings=
 TakeRecorderWorldSourceSettings=
+BoneProxy=BoneProxy.Transforms.Bone,BoneProxy.Transforms.Reference,BoneProxy.Transforms.Mesh Relative
 
 [DetailMultiObjectNodeExpansion]
 GeneralProjectSettings=True
@@ -2706,8 +2762,8 @@ Contexts=(Name="SkeletonEditor",Commands=)
 Contexts=(Name="SkeletonEditor.Viewport0",Commands=)
 
 [DetailPropertyExpansion]
-PreviewMeshCollection=
-DataAsset=
+PreviewMeshCollection="\"Object.SkeletalMeshes\" "
+DataAsset="\"Object.SkeletalMeshes\" "
 Object=
 BP_WPickup_PistolP226_C="\"Object.Weapon Vars.WeaponStats\" "
 BP_WPickup_C=
@@ -2721,6 +2777,8 @@ ActorComponent=
 InputSettings=
 SphereComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[7]\" "
 BP_Pickup_Attachment_C="\"Object.Weapon Vars.WeaponStats\" "
+BP_Suppressor_0_C="\"Object.AttachmentSync.AttachmentAttributes\" "
+ASAttachment="\"Object.AttachmentSync.AttachmentAttributes\" "
 
 [PlacementMode]
 RecentlyPlaced=/Game/bodycamFPSkit/Blueprints/BP_Cylinder.BP_Cylinder;
@@ -3049,4 +3107,25 @@ Results=None
 
 [InterchangeSelectPipeline]
 Materials_LastSelectedPipeline=InterchangeGenericMaterialPipeline
+
+[MaterialInstanceEditor]
+bShowGrid=True
+bDrawGrid=False
+PrimType=1
+
+[/Script/UnrealEd.EditorLoadingSavingSettings]
+AutoSaveMaxBackups=10
+AutoSaveMethod=BackupAndRestore
+AutoReimportDirectorySettings=(SourceDirectory="/Game/",MountPoint="",Wildcards=((Wildcard="Localization/*")))
+bForceCompilationAtStartup=False
+bRestoreOpenAssetTabsOnRestart=False
+bMonitorContentDirectories=True
+AutoReimportThreshold=3.000000
+bAutoCreateAssets=True
+bAutoDeleteAssets=True
+bDetectChangesOnStartup=True
+bPromptBeforeAutoImporting=True
+bDeleteSourceFilesWithAssets=False
+bAutomaticallyCheckoutOnAssetModification=False
+bSCCUseGlobalSettings=False
 
