Add: weapon working with basic attachment socket system

--- a/Config/DefaultGameplayTags.ini
+++ b/Config/DefaultGameplayTags.ini
@@ -11,8 +11,8 @@ NetIndexFirstBitSegment=16
 +GameplayTagList=(Tag="Grip",DevComment="Grip replacement socket (socket)")
 +GameplayTagList=(Tag="Magazine",DevComment="Magazine replacement socket (socket)")
 +GameplayTagList=(Tag="Muzzle",DevComment="Muzzle attachment at the end of barrel (socket)")
-+GameplayTagList=(Tag="Muzzle.Silencer",DevComment="Silencer Muzzle attachment at the end of barrel (socket)")
-+GameplayTagList=(Tag="Muzzle.Silencer.Silencer0",DevComment="Silencer0 reduces sound and recoil (object)")
++GameplayTagList=(Tag="Muzzle.Suppressor",DevComment="Suppressor Muzzle attachment at the end of barrel (socket)")
++GameplayTagList=(Tag="Muzzle.Suppressor.Suppressor0",DevComment="Suppressor0 reduces sound and recoil (object)")
 +GameplayTagList=(Tag="Rail",DevComment="Rail attachment system on handguard (socket)")
 +GameplayTagList=(Tag="Rail.Bottom",DevComment="Bottom Rail attachment slot beneath the handguard (socket)")
 +GameplayTagList=(Tag="Rail.Bottom.Foregrip",DevComment="Foregrip attachment beneath the handguard (socket)")
