--- a/Saved/Config/WindowsEditor/GameplayTagsEditorState.ini
+++ b/Saved/Config/WindowsEditor/GameplayTagsEditorState.ini
@@ -1,18 +1,18 @@
 [GameplayTagWidget]
 Gameplay TagMuzzle.Expanded=True
 Gameplay TagMuzzle.Silencer0.Expanded=False
-Gameplay TagSight.Expanded=True
+Gameplay TagSight.Expanded=False
 Gameplay TagForegrip.Expanded=True
 Gameplay TagForesight.Expanded=True
 Gameplay TagMuzzle.Silencer.Expanded=True
-Gameplay TagMuzzle.Silencer.Silencer0.Expanded=False
+Gameplay TagMuzzle.Silencer.Silencer0.Expanded=True
 Gameplay TagRail.Expanded=True
 Gameplay TagRail.Top.Expanded=True
 Gameplay TagRail.Bottom.Expanded=True
 Gameplay TagRail.Left.Expanded=True
 Gameplay TagRail.Right.Expanded=True
 Gameplay TagSling.Expanded=False
-Gameplay TagStock.Expanded=True
+Gameplay TagStock.Expanded=False
 Gameplay TagStock.Sling.Expanded=True
 Gameplay TagStock.Sling.Sling0.Expanded=True
 Gameplay TagGrip.Expanded=False
@@ -24,4 +24,5 @@ Gameplay TagRail.Left.Tactical.Expanded=True
 Gameplay TagRail.Right.Tactical.Expanded=True
 Gameplay TagSight.Scope.Expanded=True
 Gameplay TagSight.Reflex.Expanded=True
+Gameplay TagMuzzle.Suppressor.Expanded=True
 
