--- a/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -159,6 +159,9 @@ LastLevel=/Game/bodycamFPSkit/Maps/Map_Test
 [AssetEditorSubsystem]
 CleanShutdown=False
 OpenAssetsAtExit=/Game/FPS_Weapons/FPS_Weapon_Bundle/Weapons/Meshes/Attachments/BP_Suppressor_0.BP_Suppressor_0
+OpenAssetsAtExit=/Game/FPS_Weapons/FPS_Weapon_Bundle/Weapons/Meshes/AK47/BP_AK47.BP_AK47
+OpenAssetsAtExit=/Game/FPS_Weapons/FPS_Weapon_Bundle/Weapons/Meshes/Attachments/BP_Sight_Reddot_0.BP_Sight_Reddot_0
+OpenAssetsAtExit=/Game/FPS_Weapons/FPS_Weapon_Bundle/Weapons/Meshes/AK47/SK_AK47.SK_AK47
 
 [RootWindow]
 ScreenPosition=X=317.000 Y=177.000
@@ -1378,26 +1381,26 @@ ContentBrowserTab3.ThumbnailSize=2
 ContentBrowserTab3.CurrentViewType=1
 
 [ContentBrowserRecent]
-MRUItem0=/Game/FPS_Weapons/FPS_Weapon_Bundle/Weapons/Meshes/Attachments/BP_Suppressor_0
-MRUItem1=/Game/FPS_Weapons/FPS_Weapon_Bundle/Weapons/Meshes/AK47/SK_AK47_Skeleton1
-MRUItem2=/Game/FPS_Weapons/FPS_Weapon_Bundle/Weapons/Meshes/AK47/SK_AK47_X_Skeleton
-MRUItem3=/Game/FPS_Weapons/FPS_Weapon_Bundle/Weapons/Meshes/AK47/SK_AK47_Skeleton
-MRUItem4=/Game/FPS_Weapons/FPS_Weapon_Bundle/Weapons/Meshes/AK47/BP_AK47
-MRUItem5=/Game/FPS_Weapons/FPS_Weapon_Bundle/Weapons/Materials/Master_Material/Mat_Weapon_Master_USE
-MRUItem6=/Game/FPS_Weapons/FPS_Weapon_Bundle/Weapons/Materials/AK47/Mati_AK47
-MRUItem7=/Game/FPS_Weapons/FPS_Weapon_Bundle/Weapons/Meshes/AK47/SK_AK47
-MRUItem8=/Game/FPS_Weapons/FPS_Weapon_Bundle/Weapons/Meshes/Ka47/BP_AS_Attachment_Silencer
-MRUItem9=/Game/bodycamFPSkit/Blueprints/Weapons/Attachments/Laser_Compact_0/BP_Attachment_Laser_Compact_0
-MRUItem10=/Game/bodycamFPSkit/Blueprints/Weapons/BP_Pickup_Attachment
-MRUItem11=/Game/bodycamFPSkit/Blueprints/Weapons/BP_Weapon_Basic
-MRUItem12=/Game/bodycamFPSkit/Blueprints/Weapons/BP_WPickup
-MRUItem13=/Game/bodycamFPSkit/Blueprints/BP_Weapon_Base
-MRUItem14=/Game/bodycamFPSkit/Blueprints/BP_FirstPersonCharacter
-MRUItem15=/Game/bodycamFPSkit/Blueprints/Weapons/BP_LaserPickup
-MRUItem16=/Game/bodycamFPSkit/Blueprints/Weapons/Pistols/Pistol_P226/BP_WPickup_PistolP226
-MRUItem17=/Game/bodycamFPSkit/Blueprints/BP_Interaction_Base
-MRUItem18=/Game/bodycamFPSkit/Blueprints/INT_Interaction
-MRUItem19=/Game/bodycamFPSkit/Blueprints/BP_Cylinder
+MRUItem0=/Game/FPS_Weapons/FPS_Weapon_Bundle/Weapons/Meshes/AK47/SK_AK47
+MRUItem1=/Game/FPS_Weapons/FPS_Weapon_Bundle/Weapons/Meshes/Attachments/BP_Sight_Reddot_0
+MRUItem2=/Game/FPS_Weapons/FPS_Weapon_Bundle/Weapons/Meshes/AK47/BP_AK47
+MRUItem3=/Game/FPS_Weapons/FPS_Weapon_Bundle/Weapons/Meshes/Attachments/BP_Suppressor_0
+MRUItem4=/Game/FPS_Weapons/FPS_Weapon_Bundle/Weapons/Meshes/Attachments/BP_Vertgrip_0
+MRUItem5=/Game/FPS_Weapons/FPS_Weapon_Bundle/Weapons/Meshes/AK47/SK_AK47_Skeleton1
+MRUItem6=/Game/FPS_Weapons/FPS_Weapon_Bundle/Weapons/Meshes/AK47/SK_AK47_X_Skeleton
+MRUItem7=/Game/FPS_Weapons/FPS_Weapon_Bundle/Weapons/Meshes/AK47/SK_AK47_Skeleton
+MRUItem8=/Game/FPS_Weapons/FPS_Weapon_Bundle/Weapons/Materials/Master_Material/Mat_Weapon_Master_USE
+MRUItem9=/Game/FPS_Weapons/FPS_Weapon_Bundle/Weapons/Materials/AK47/Mati_AK47
+MRUItem10=/Game/FPS_Weapons/FPS_Weapon_Bundle/Weapons/Meshes/Ka47/BP_AS_Attachment_Silencer
+MRUItem11=/Game/bodycamFPSkit/Blueprints/Weapons/Attachments/Laser_Compact_0/BP_Attachment_Laser_Compact_0
+MRUItem12=/Game/bodycamFPSkit/Blueprints/Weapons/BP_Pickup_Attachment
+MRUItem13=/Game/bodycamFPSkit/Blueprints/Weapons/BP_Weapon_Basic
+MRUItem14=/Game/bodycamFPSkit/Blueprints/Weapons/BP_WPickup
+MRUItem15=/Game/bodycamFPSkit/Blueprints/BP_Weapon_Base
+MRUItem16=/Game/bodycamFPSkit/Blueprints/BP_FirstPersonCharacter
+MRUItem17=/Game/bodycamFPSkit/Blueprints/Weapons/BP_LaserPickup
+MRUItem18=/Game/bodycamFPSkit/Blueprints/Weapons/Pistols/Pistol_P226/BP_WPickup_PistolP226
+MRUItem19=/Game/bodycamFPSkit/Blueprints/BP_Interaction_Base
 
 [MessageLog]
 LastLogListing=PIE
@@ -2399,6 +2402,28 @@ BP_Suppressor_0_C.WorldPartition=True
 BP_Suppressor_0_C.Events=True
 BoneProxy.Bone=True
 BoneProxy.Transforms=True
+BP_Vertgrip_0_C.AttachmentSync=True
+BP_Vertgrip_0_C.Tick=True
+BP_Vertgrip_0_C.Replication=True
+BP_Vertgrip_0_C.Rendering=True
+BP_Vertgrip_0_C.Collision=True
+BP_Vertgrip_0_C.Actor=True
+BP_Vertgrip_0_C.Input=True
+BP_Vertgrip_0_C.HLOD=True
+BP_Vertgrip_0_C.Physics=True
+BP_Vertgrip_0_C.WorldPartition=True
+BP_Vertgrip_0_C.Events=True
+BP_Sight_Reddot_0_C.AttachmentSync=True
+BP_Sight_Reddot_0_C.Tick=True
+BP_Sight_Reddot_0_C.Replication=True
+BP_Sight_Reddot_0_C.Rendering=True
+BP_Sight_Reddot_0_C.Collision=True
+BP_Sight_Reddot_0_C.Actor=True
+BP_Sight_Reddot_0_C.Input=True
+BP_Sight_Reddot_0_C.HLOD=True
+BP_Sight_Reddot_0_C.Physics=True
+BP_Sight_Reddot_0_C.WorldPartition=True
+BP_Sight_Reddot_0_C.Events=True
 
 [AssetEditorToolkitTabLocation]
 /Game/bodycamFPSkit/Blueprints/Weapons/Pistol/BP_Weapon_Pickup_Pistol.BP_Weapon_Pickup_Pistol=1
@@ -2457,6 +2482,7 @@ BoneProxy.Transforms=True
 /Game/FPS_Weapons/FPS_Weapon_Bundle/Weapons/Meshes/AK47/SK_AK47_Skeleton.SK_AK47_Skeleton=1
 /Game/FPS_Weapons/FPS_Weapon_Bundle/Weapons/Meshes/AK47/SK_AK47_X_Skeleton.SK_AK47_X_Skeleton=1
 /Game/FPS_Weapons/FPS_Weapon_Bundle/Weapons/Meshes/AK47/SK_AK47_Skeleton1.SK_AK47_Skeleton1=1
+/Game/FPS_Weapons/FPS_Weapon_Bundle/Weapons/Meshes/Attachments/BP_Vertgrip_0.BP_Vertgrip_0=1
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -2762,8 +2788,8 @@ Contexts=(Name="SkeletonEditor",Commands=)
 Contexts=(Name="SkeletonEditor.Viewport0",Commands=)
 
 [DetailPropertyExpansion]
-PreviewMeshCollection="\"Object.SkeletalMeshes\" "
-DataAsset="\"Object.SkeletalMeshes\" "
+PreviewMeshCollection=
+DataAsset=
 Object=
 BP_WPickup_PistolP226_C="\"Object.Weapon Vars.WeaponStats\" "
 BP_WPickup_C=
@@ -2779,8 +2805,12 @@ SphereComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArra
 BP_Pickup_Attachment_C="\"Object.Weapon Vars.WeaponStats\" "
 BP_Suppressor_0_C="\"Object.AttachmentSync.AttachmentAttributes\" "
 ASAttachment="\"Object.AttachmentSync.AttachmentAttributes\" "
+BP_Vertgrip_0_C="\"Object.AttachmentSync.AttachmentAttributes\" "
+AttachmentSyncComponent="\"Object.AttachmentSync.MuzzleAttachments\" \"Object.AttachmentSync.SightAttachments\" "
+BP_Sight_Reddot_0_C="\"Object.AttachmentSync.AttachmentAttributes\" "
 
 [PlacementMode]
+RecentlyPlaced=/Game/FPS_Weapons/FPS_Weapon_Bundle/Weapons/Meshes/AK47/BP_AK47.BP_AK47;
 RecentlyPlaced=/Game/bodycamFPSkit/Blueprints/BP_Cylinder.BP_Cylinder;
 RecentlyPlaced=/Engine/BasicShapes/Cylinder.Cylinder;/Engine/Transient.ActorFactoryBasicShape_0
 RecentlyPlaced=/Script/Engine.Actor;/Engine/Transient.ActorFactoryEmptyActor_0
