Edit: fix fps weapons main material error with textures

--- a/Saved/Config/WindowsEditor/GameplayTagsEditorState.ini
+++ b/Saved/Config/WindowsEditor/GameplayTagsEditorState.ini
@@ -25,4 +25,5 @@ Gameplay TagRail.Right.Tactical.Expanded=True
 Gameplay TagSight.Scope.Expanded=True
 Gameplay TagSight.Reflex.Expanded=True
 Gameplay TagMuzzle.Suppressor.Expanded=True
+Gameplay TagMuzzle.Suppressor.Suppressor0.Expanded=True
 
