--- a/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -157,11 +157,7 @@ CurrentScalingGridSize=7
 LastLevel=/Game/bodycamFPSkit/Maps/Map_Test
 
 [AssetEditorSubsystem]
-CleanShutdown=False
-OpenAssetsAtExit=/Game/FPS_Weapons/FPS_Weapon_Bundle/Weapons/Meshes/Attachments/BP_Suppressor_0.BP_Suppressor_0
-OpenAssetsAtExit=/Game/FPS_Weapons/FPS_Weapon_Bundle/Weapons/Meshes/AK47/BP_AK47.BP_AK47
-OpenAssetsAtExit=/Game/FPS_Weapons/FPS_Weapon_Bundle/Weapons/Meshes/Attachments/BP_Sight_Reddot_0.BP_Sight_Reddot_0
-OpenAssetsAtExit=/Game/FPS_Weapons/FPS_Weapon_Bundle/Weapons/Meshes/AK47/SK_AK47.SK_AK47
+CleanShutdown=True
 
 [RootWindow]
 ScreenPosition=X=317.000 Y=177.000
@@ -1270,6 +1266,8 @@ EasyBallistics.TimeStamp=2023.09.10-05.56.06
 EasyBallistics.LastCompileMethod=Unknown
 AttachmentSync.TimeStamp=2023.09.18-22.38.41
 AttachmentSync.LastCompileMethod=Unknown
+TextureEditor.TimeStamp=2023.08.20-00.43.40
+TextureEditor.LastCompileMethod=Unknown
 
 [Python]
 LastDirectory=
@@ -1304,7 +1302,7 @@ ContentBrowserDrawer.VerticalSplitter.SlotSize1=0.75
 ContentBrowserDrawer.FavoriteSplitter.SlotSize0=0.200000003
 ContentBrowserDrawer.FavoriteSplitter.SlotSize1=0.800000012
 ContentBrowserDrawer.FavoriteSplitter.SlotSize2=0.400000006
-ContentBrowserDrawer.SelectedPaths=/Game/FPS_Weapons/FPS_Weapon_Bundle/Weapons/Meshes/Attachments
+ContentBrowserDrawer.SelectedPaths=/Game/FPS_Weapons/FPS_Weapon_Bundle/Weapons/Textures/AK74U
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 FavoritePaths=
@@ -1381,26 +1379,26 @@ ContentBrowserTab3.ThumbnailSize=2
 ContentBrowserTab3.CurrentViewType=1
 
 [ContentBrowserRecent]
-MRUItem0=/Game/FPS_Weapons/FPS_Weapon_Bundle/Weapons/Meshes/AK47/SK_AK47
-MRUItem1=/Game/FPS_Weapons/FPS_Weapon_Bundle/Weapons/Meshes/Attachments/BP_Sight_Reddot_0
-MRUItem2=/Game/FPS_Weapons/FPS_Weapon_Bundle/Weapons/Meshes/AK47/BP_AK47
-MRUItem3=/Game/FPS_Weapons/FPS_Weapon_Bundle/Weapons/Meshes/Attachments/BP_Suppressor_0
-MRUItem4=/Game/FPS_Weapons/FPS_Weapon_Bundle/Weapons/Meshes/Attachments/BP_Vertgrip_0
-MRUItem5=/Game/FPS_Weapons/FPS_Weapon_Bundle/Weapons/Meshes/AK47/SK_AK47_Skeleton1
-MRUItem6=/Game/FPS_Weapons/FPS_Weapon_Bundle/Weapons/Meshes/AK47/SK_AK47_X_Skeleton
-MRUItem7=/Game/FPS_Weapons/FPS_Weapon_Bundle/Weapons/Meshes/AK47/SK_AK47_Skeleton
-MRUItem8=/Game/FPS_Weapons/FPS_Weapon_Bundle/Weapons/Materials/Master_Material/Mat_Weapon_Master_USE
-MRUItem9=/Game/FPS_Weapons/FPS_Weapon_Bundle/Weapons/Materials/AK47/Mati_AK47
-MRUItem10=/Game/FPS_Weapons/FPS_Weapon_Bundle/Weapons/Meshes/Ka47/BP_AS_Attachment_Silencer
-MRUItem11=/Game/bodycamFPSkit/Blueprints/Weapons/Attachments/Laser_Compact_0/BP_Attachment_Laser_Compact_0
-MRUItem12=/Game/bodycamFPSkit/Blueprints/Weapons/BP_Pickup_Attachment
-MRUItem13=/Game/bodycamFPSkit/Blueprints/Weapons/BP_Weapon_Basic
-MRUItem14=/Game/bodycamFPSkit/Blueprints/Weapons/BP_WPickup
-MRUItem15=/Game/bodycamFPSkit/Blueprints/BP_Weapon_Base
-MRUItem16=/Game/bodycamFPSkit/Blueprints/BP_FirstPersonCharacter
-MRUItem17=/Game/bodycamFPSkit/Blueprints/Weapons/BP_LaserPickup
-MRUItem18=/Game/bodycamFPSkit/Blueprints/Weapons/Pistols/Pistol_P226/BP_WPickup_PistolP226
-MRUItem19=/Game/bodycamFPSkit/Blueprints/BP_Interaction_Base
+MRUItem0=/Game/FPS_Weapons/FPS_Weapon_Bundle/Weapons/Materials/AK47/Mati_AK47
+MRUItem1=/Game/FPS_Weapons/FPS_Weapon_Bundle/Weapons/Meshes/AK74U/SK_AK74U_Y
+MRUItem2=/Game/FPS_Weapons/FPS_Weapon_Bundle/Weapons/Meshes/AK74U/SK_AK74U_X
+MRUItem3=/Game/FPS_Weapons/FPS_Weapon_Bundle/Weapons/Meshes/AK47/SK_AK47
+MRUItem4=/Game/FPS_Weapons/FPS_Weapon_Bundle/Weapons/Textures/AK74U/T_AK74U_M_MSK
+MRUItem5=/Game/FPS_Weapons/FPS_Weapon_Bundle/Weapons/Materials/Master_Material/Mat_Weapon_Master_USE
+MRUItem6=/Game/FPS_Weapons/FPS_Weapon_Bundle/Weapons/Meshes/Attachments/BP_Sight_Reddot_0
+MRUItem7=/Game/FPS_Weapons/FPS_Weapon_Bundle/Weapons/Meshes/AK47/BP_AK47
+MRUItem8=/Game/FPS_Weapons/FPS_Weapon_Bundle/Weapons/Meshes/Attachments/BP_Suppressor_0
+MRUItem9=/Game/FPS_Weapons/FPS_Weapon_Bundle/Weapons/Meshes/Attachments/BP_Vertgrip_0
+MRUItem10=/Game/FPS_Weapons/FPS_Weapon_Bundle/Weapons/Meshes/AK47/SK_AK47_Skeleton1
+MRUItem11=/Game/FPS_Weapons/FPS_Weapon_Bundle/Weapons/Meshes/AK47/SK_AK47_X_Skeleton
+MRUItem12=/Game/FPS_Weapons/FPS_Weapon_Bundle/Weapons/Meshes/AK47/SK_AK47_Skeleton
+MRUItem13=/Game/FPS_Weapons/FPS_Weapon_Bundle/Weapons/Meshes/Ka47/BP_AS_Attachment_Silencer
+MRUItem14=/Game/bodycamFPSkit/Blueprints/Weapons/Attachments/Laser_Compact_0/BP_Attachment_Laser_Compact_0
+MRUItem15=/Game/bodycamFPSkit/Blueprints/Weapons/BP_Pickup_Attachment
+MRUItem16=/Game/bodycamFPSkit/Blueprints/Weapons/BP_Weapon_Basic
+MRUItem17=/Game/bodycamFPSkit/Blueprints/Weapons/BP_WPickup
+MRUItem18=/Game/bodycamFPSkit/Blueprints/BP_Weapon_Base
+MRUItem19=/Game/bodycamFPSkit/Blueprints/BP_FirstPersonCharacter
 
 [MessageLog]
 LastLogListing=PIE
@@ -2424,6 +2422,12 @@ BP_Sight_Reddot_0_C.HLOD=True
 BP_Sight_Reddot_0_C.Physics=True
 BP_Sight_Reddot_0_C.WorldPartition=True
 BP_Sight_Reddot_0_C.Events=True
+Texture2D.LevelOfDetail=True
+Texture2D.Compression=True
+Texture2D.Texture=True
+Texture2D.Adjustments=True
+Texture2D.File Path=True
+Texture2D.Compositing=True
 
 [AssetEditorToolkitTabLocation]
 /Game/bodycamFPSkit/Blueprints/Weapons/Pistol/BP_Weapon_Pickup_Pistol.BP_Weapon_Pickup_Pistol=1
@@ -2483,6 +2487,10 @@ BP_Sight_Reddot_0_C.Events=True
 /Game/FPS_Weapons/FPS_Weapon_Bundle/Weapons/Meshes/AK47/SK_AK47_X_Skeleton.SK_AK47_X_Skeleton=1
 /Game/FPS_Weapons/FPS_Weapon_Bundle/Weapons/Meshes/AK47/SK_AK47_Skeleton1.SK_AK47_Skeleton1=1
 /Game/FPS_Weapons/FPS_Weapon_Bundle/Weapons/Meshes/Attachments/BP_Vertgrip_0.BP_Vertgrip_0=1
+/Game/FPS_Weapons/FPS_Weapon_Bundle/Weapons/Meshes/Attachments/BP_Sight_Reddot_0.BP_Sight_Reddot_0=1
+/Game/FPS_Weapons/FPS_Weapon_Bundle/Weapons/Textures/AK74U/T_AK74U_M_MSK.T_AK74U_M_MSK=1
+/Game/FPS_Weapons/FPS_Weapon_Bundle/Weapons/Meshes/AK74U/SK_AK74U_X.SK_AK74U_X=1
+/Game/FPS_Weapons/FPS_Weapon_Bundle/Weapons/Meshes/AK74U/SK_AK74U_Y.SK_AK74U_Y=1
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -2829,7 +2837,6 @@ StaticMesh.StaticMesh=False
 SkeletalMeshComponent.Collision=False
 
 [/Script/UnrealEd.MaterialEditorOptions]
-bShowGrid=False
 bHideUnrelatedNodes=False
 bUseUnsortedMenus=False
 
@@ -3139,7 +3146,7 @@ Results=None
 Materials_LastSelectedPipeline=InterchangeGenericMaterialPipeline
 
 [MaterialInstanceEditor]
-bShowGrid=True
+bShowGrid=False
 bDrawGrid=False
 PrimType=1
 
